kirchoff spelling corrected

--- a/tex/electronicsBJT.tex
+++ b/tex/electronicsBJT.tex
@@ -255,7 +255,7 @@ V_{CC}&=V_1+V_2=3+8=\SI{11}{\volt}
 %=========
 
 
-شکل \حوالہ{شکل_ٹرانزسٹر_کا_بنیادی_دور} میں ٹرانزسٹر کا دور دکھایا گیا ہے۔داخلی جانب کرچاف کے قانون برائے برقی دباو کی مدد سے ہم ٹرانزسٹر میں برقی رو \عددی{I_C}  یوں حاصل کر سکتے ہیں۔
+شکل \حوالہ{شکل_ٹرانزسٹر_کا_بنیادی_دور} میں ٹرانزسٹر کا دور دکھایا گیا ہے۔داخلی جانب کرخوف کے قانون برائے برقی دباو کی مدد سے ہم ٹرانزسٹر میں برقی رو \عددی{I_C}  یوں حاصل کر سکتے ہیں۔
 \begin{gather} \label{مساوات_ٹرانزسٹر_کا_بنیادی_دور_داخلی_جانب}
 \begin{aligned}
 V_{BB} &=V_{BE} +(I_B+I_C) R_E\\
@@ -276,7 +276,7 @@ I_B&=\frac{I_E}{\beta+1}
 \begin{align}
 V_{BE}=\SI{0.7}{\volt}
 \end{align}
-اسی طرح خارجی جانب کرچاف کے قانون برائے برقی دباو کی مدد سے ٹرانزسٹر کے کلکٹر -ایمٹر سروں کے مابین برقی دباو \عددی{V_{CE}} یوں حاصل کی جاتی ہے۔
+اسی طرح خارجی جانب کرخوف کے قانون برائے برقی دباو کی مدد سے ٹرانزسٹر کے کلکٹر -ایمٹر سروں کے مابین برقی دباو \عددی{V_{CE}} یوں حاصل کی جاتی ہے۔
 \begin{gather} \label{مساوات_ٹرانزسٹر_کا_بنیادی_دور_خارجی_جانب}
 \begin{aligned}
 V_{CC}&=I_C R_C + V_{CE}+(I_B+I_C)R_E\\
@@ -387,7 +387,7 @@ R_E&=\SI{1}{\kilo \ohm}
 \label{شکل_ٹرانزسٹر__جمع_منفی_جمع_سادہ_دور}
 \end{figure}
 
-حل:بیس جانب کرچاف کے قانون برائے برقی دباو کی مدد سے 
+حل:بیس جانب کرخوف کے قانون برائے برقی دباو کی مدد سے 
 \begin{align*}
 V_{BB}&=\left(I_B+I_C \right) R_E+V_{EB}\\
 &=IE R_E +V_{EB}
@@ -397,7 +397,7 @@ V_{BB}&=\left(I_B+I_C \right) R_E+V_{EB}\\
 I_E&=\frac{V_{BB}-V_{EB}}{R_E}=\frac{1.2-0.7}{1000}=\SI{0.5}{\milli \ampere}\\
 I_C &\approx I_E =\SI{0.5}{\milli \ampere} 
 \end{align*}
-حاصل ہوتا ہے۔اسی طرح کرچاف کے قانون برائے برقی دباو کی مدد سے
+حاصل ہوتا ہے۔اسی طرح کرخوف کے قانون برائے برقی دباو کی مدد سے
 \begin{align*}
 V_{CC}&=\left(I_B+I_C \right)R_E+V_{EC}+I_C R_C\\
 &=I_E  RE + I_C R_C +V_{EC}
@@ -423,7 +423,7 @@ R_E &=\SI{900}{\ohm} \\
  ہیں۔اس دور میں ٹرانزسٹر کے تینوں سروں پر برقی دباو اور برقی رو حاصل کریں۔
 
 حل:
-ٹرانزسٹر کے داخلی جانب کرچاف کے قانون برائے برقی دباو کی مدد سے \عددی{I_E} حاصل کرتے ہیں۔
+ٹرانزسٹر کے داخلی جانب کرخوف کے قانون برائے برقی دباو کی مدد سے \عددی{I_E} حاصل کرتے ہیں۔
 \begin{align*}
 V_{BB} &=V_{BE}+I_{E}R_{E}\\
 I_E&=\frac{V_{BB}-V_{BE}}{R_E}\\
@@ -495,7 +495,7 @@ R_E &=\SI{900}{\ohm} \\
  ہیں۔اس دور میں ٹرانزسٹر کے تینوں سروں پر برقی دباو اور برقی رو حاصل کریں۔
 
 حل:
-ٹرانزسٹر کے داخلی جانب کرچاف کے قانون برائے برقی دباو کی مدد سے \عددی{I_E} حاصل کرتے ہیں۔
+ٹرانزسٹر کے داخلی جانب کرخوف کے قانون برائے برقی دباو کی مدد سے \عددی{I_E} حاصل کرتے ہیں۔
 \begin{align*}
 V_{BB} &=I_{E}R_{E}+V_{EB}\\
 I_E&=\frac{V_{BB}-V_{EB}}{R_E}\\
@@ -554,7 +554,7 @@ V_E=V_B+V_{EB}=-1.1+0.7=\SI{-0.4}{\volt}
 \label{شکل_تینوں_سروں_پر_مزاحمت}
 \end{figure}
 
-شکل \حوالہ{شکل_تینوں_سروں_پر_مزاحمت} میں دکھائے دور کے داخلی جانب \عددی{R_B} نصب کیا گیا ہے۔اس دور کو بھی گزشتہ دوروں کی طرح حل کیا جاتا ہے۔داخلی جانب کرچاف کے قانون برائے برقی دباو کی مدد سے 
+شکل \حوالہ{شکل_تینوں_سروں_پر_مزاحمت} میں دکھائے دور کے داخلی جانب \عددی{R_B} نصب کیا گیا ہے۔اس دور کو بھی گزشتہ دوروں کی طرح حل کیا جاتا ہے۔داخلی جانب کرخوف کے قانون برائے برقی دباو کی مدد سے 
 \begin{gather} \label{مساوات_ٹرانزسٹر_دور_بمع_تینوں_مزاحمت_کی_داخلی_جانب}
 \begin{aligned}
 V_{BB}&=I_B R_B+V_{BE}+( I_B+I_C )R_E \\
@@ -718,11 +718,11 @@ R_E=\SI{100}{\ohm}, \hspace{5mm} \beta=99
 \end{align*}
 ہیں۔نقطہ کارکردگی حاصل کریں۔
 
-حل:ٹرانزسٹر کے کلکٹر  پر کرچاف کے قانون برائے برقی رو کی مدد سے
+حل:ٹرانزسٹر کے کلکٹر  پر کرخوف کے قانون برائے برقی رو کی مدد سے
 \begin{align*}
 I_{RC}=I_B+I_C
 \end{align*}
-لکھا جا سکتا ہے۔چونکہ \عددی{I_B+I_C=I_E} ہوتا ہے لہٰذا \عددی{I_{RC}=I_E} ہو گا۔یوں کرچاف کے قانون برائے برقی دباو کے استعمال سے
+لکھا جا سکتا ہے۔چونکہ \عددی{I_B+I_C=I_E} ہوتا ہے لہٰذا \عددی{I_{RC}=I_E} ہو گا۔یوں کرخوف کے قانون برائے برقی دباو کے استعمال سے
 \begin{align*}
 V_{CC}=I_{E} R_C+I_B R_B +V_{BE}+I_E R_E 
 \end{align*}
@@ -735,7 +735,7 @@ I_E=\frac{V_{CC}-V_{BE}}{R_C+\frac{R_B}{\beta+1}+R_E}
 I_E&=\frac{20-0.7}{10000+\frac{200000}{99+1}+100}\\
 &=\SI{1.595}{\milli \ampere}
 \end{align*}
-حاصل ہوتا ہے۔کرچاف کے قانون برائے برقی دباو کو خارجی جانب یوں لکھا جا سکتا ہے
+حاصل ہوتا ہے۔کرخوف کے قانون برائے برقی دباو کو خارجی جانب یوں لکھا جا سکتا ہے
 \begin{align*}
 V_{CC}=I_E R_C+V_{CE}+I_E R_E
 \end{align*}
@@ -763,7 +763,7 @@ R_E=\SI{1}{\kilo \ohm}, \hspace{5mm} \beta=99
 \end{align*}
 ہیں۔نقطہ کارکردگی حاصل کریں۔
 
-حل:شکل  پ میں اسی کو دوبارہ بنایا گیا ہے جہاں داخلی اور خارجی جانب بالکل علیحدہ واضح نظر آتے ہیں۔داخلی جانب کرچاف کے قانون برائے برقی دباو سے
+حل:شکل  پ میں اسی کو دوبارہ بنایا گیا ہے جہاں داخلی اور خارجی جانب بالکل علیحدہ واضح نظر آتے ہیں۔داخلی جانب کرخوف کے قانون برائے برقی دباو سے
 \begin{align*}
 V_{CC}&=I_B R_B +V_{BE}+I_E R_E \\
 &=\frac{I_E}{\beta +1} R_B + V_{BE}+I_E R_E\\
@@ -832,7 +832,7 @@ V_{EC}=\SI{3.81}{\volt}
 \label{شکل_ٹرانزسٹر_یکسمتی_مائل_جمع_منفی_جمع}
 \end{figure}
 
-حل:بیس جانب کرچاف کے قانون برائے برقی دباو سے
+حل:بیس جانب کرخوف کے قانون برائے برقی دباو سے
 \begin{align*}
 12-8=I_B R_B + V_{EB}+I_E R_E
 \end{align*}
@@ -994,7 +994,7 @@ I_E &=\frac{V_{BB}-V_{BE}}{\frac{R_B}{\beta+1}+R_E}\\
 \label{شکل_ٹرانزسٹر_ڈارلنگٹن_جوڑی_مثال}
 \end{figure}
 
-حل:بیس جانب کرچاف کے قانون برائے برقی دباو سے
+حل:بیس جانب کرخوف کے قانون برائے برقی دباو سے
 \begin{align*}
 5=I_{B1} \times 100000+V_{BE1}+V_{BE2}+I_{E2} \times 3600
 \end{align*}
@@ -1218,7 +1218,7 @@ V_{CE} &\approx V_{CC} -I_{CQ} \left (R_C+R_E \right ) \\
 \label{شکل_ٹرانزسٹر_بیٹا_ٹھیک_ٹھیک_معلوم}
 \end{figure}
 
-حل:داخلی جانب کرچاف کے قانون برائے برقی دباو کے مطابق
+حل:داخلی جانب کرخوف کے قانون برائے برقی دباو کے مطابق
 \begin{align*}
 V_{CC}&=I_B R_b+V_{BE}+I_E R_e\\
 &=V_{BE}+I_E \left(\frac{R_b}{\beta+1}+R_e \right)
@@ -1450,7 +1450,7 @@ I_{Cc}&=\frac{V_{BB}-V_{BE}}{\left (\frac{R_B''}{\beta+1} \right )}=\frac{6.2-0.
 \label{شکل_ٹرانزسٹر_ڈارلنگٹن_مزاحمت_عکس}
 \end{figure}
 
-حل:بیس جانب کرچاف کے قانون برائے برقی دباو سے
+حل:بیس جانب کرخوف کے قانون برائے برقی دباو سے
 \begin{align*}
 V_{BB}&=I_{B1} R_B +V_{BE1}+V_{BE2}+I_{E2} R_E
 \end{align*}
@@ -1792,7 +1792,7 @@ V_{CEQ}&=\frac{12 \times 1000}{1200+1000}=\SI{5.45}{\volt}
 \ابتدا{مثال}
 مندرجہ بالا مثال میں \عددی{\beta=37} لیتے ہوئے \عددی{R_B} اور \عددی{V_{BB}} حاصل کریں۔
 
-حل:\عددی{R_E=\tfrac{10 R_B}{\beta+1}} کے استعمال سے  \عددی{R_B=\SI{760}{\ohm}} حاصل ہوتا ہے۔کرچاف کے قانون برائے برقی دباو کے استعمال سے
+حل:\عددی{R_E=\tfrac{10 R_B}{\beta+1}} کے استعمال سے  \عددی{R_B=\SI{760}{\ohm}} حاصل ہوتا ہے۔کرخوف کے قانون برائے برقی دباو کے استعمال سے
 \begin{align*}
 V_{BB}&=V_{BE}+I_E \left(\frac{R_B}{\beta+1}+R_E \right)\\
 &=0.7+8.57 \times 10^{-3} \left(\frac{760}{37+1}+200 \right)=\SI{2.58}{\volt}
@@ -1830,7 +1830,7 @@ V_{CEQ2}-0.2=4 \times 10^{-3} \times 1200
 \begin{align}\label{مساوات_ٹرانزسٹر_بدلتی_رو_بار_خط_مساوات_مثال}
 V_{CEQ2}=\SI{5}{\volt}
 \end{align}
-لکھا جا سکتا ہے۔یک سمتی رو، خطِ بوجھ  کی مساوات شکل \حوالہ{شکل_ٹرانزسٹر_بدلتی_رو_بار_خط_مثال} کے خارجی جانب کرچاف کے قانون سے یوں لکھی جا سکتی ہے
+لکھا جا سکتا ہے۔یک سمتی رو، خطِ بوجھ  کی مساوات شکل \حوالہ{شکل_ٹرانزسٹر_بدلتی_رو_بار_خط_مثال} کے خارجی جانب کرخوف کے قانون سے یوں لکھی جا سکتی ہے
 \begin{align}
 V_{CC}=V_{CEQ2}+I_{CQ2} \left(R_C+R_E \right)
 \end{align}
@@ -2005,7 +2005,7 @@ i_{CF}=I_S \left (e^{\frac{v_{BE}}{V_T}}-1 \right )
 \begin{align} \label{مساوات_ٹرانزسٹر_ہوبہو_مخارج_سیدھی_رو}
 i_{EF}=\frac{I_S}{\alpha_F} \left (e^{\frac{v_{BE}}{V_T}}-1 \right )
 \end{align}
-بیس سرے پر کرچاف کے قانون برائے برقی رو کے تحت  \عددی{(i_{BF}=i_{EF}-i{CF})} ہو گا یعنی
+بیس سرے پر کرخوف کے قانون برائے برقی رو کے تحت  \عددی{(i_{BF}=i_{EF}-i{CF})} ہو گا یعنی
 \begin{align} \label{مساوات_ٹرانزسٹر_ہوبہو_قابو_سیدھی_رو_الف}
 i_{BF}=\frac{I_S}{\alpha_F} \left (e^{\frac{v_{BE}}{V_T}}-1 \right )-I_S \left (e^{\frac{v_{BE}}{V_T}}-1 \right )
 \end{align}
@@ -2035,7 +2035,7 @@ i_{CR}=\frac{I_S}{\alpha_R} \left (e^{\frac{v_{BC}}{V_T}}-1 \right )
 \begin{align} \label{مساوات_ٹرانزسٹر_مخارج_الٹی_رو}
 i_{ER}=I_S \left (e^{\frac{v_{BC}}{V_T}}-1 \right )
 \end{align}
-بیس سرے پر کرچاف کے قانون برائے برقی رو سے \عددی{i_{BR}} یوں حاصل ہوتا ہے۔
+بیس سرے پر کرخوف کے قانون برائے برقی رو سے \عددی{i_{BR}} یوں حاصل ہوتا ہے۔
 \begin{align} \label{مساوات_ٹرانزسٹر_قابو_الٹی_رو_الف}
 i_{BR}=i_{CR}-i_{ER}=\frac{I_S}{\alpha_R} \left (e^{\frac{v_{BC}}{V_T}}-1 \right )-I_S \left (e^{\frac{v_{BC}}{V_T}}-1 \right )
 \end{align}
@@ -2289,12 +2289,12 @@ i_E&=i_T+\frac{I_S}{\beta_F} \left(e^{\frac{v_{BE}}{V_T}}-1 \right )
 i_{D_{BE}}&=\frac{I_S}{\beta_F} \left(e^{\frac{v_{BE}}{V_T}}-1 \right )\\
 i_{D_{BC}}&=\frac{I_S}{\beta_R} \left(e^{\frac{v_{BC}}{V_T}}-1 \right )
 \end{align*}
-اور یوں کرچاف کے قانون برائے برقی رو سے \عددی{i_B}  حاصل کیا جا سکتا ہے یعنی
+اور یوں کرخوف کے قانون برائے برقی رو سے \عددی{i_B}  حاصل کیا جا سکتا ہے یعنی
 \begin{align}
 i_B&=i_{D_{BE}} + i_{D_{BC}}\\
 &=\frac{I_S}{\beta_F} \left(e^{\frac{v_{BE}}{V_T}}-1 \right ) +\frac{I_S}{\beta_R} \left(e^{\frac{v_{BC}}{V_T}}-1 \right )
 \end{align}
-یہ بالکل مساوات \حوالہ{مساوات_ٹرانزسٹر_چارجوں_کی_مال_برداری_اور_قابو_رو} ہی حاصل ہوا ہے۔اسی طرح کلکٹر  اور ایمٹر سروں پر کرچاف کے قانون برائے برقی رو کی مدد سے ہم لکھ سکتے ہیں۔
+یہ بالکل مساوات \حوالہ{مساوات_ٹرانزسٹر_چارجوں_کی_مال_برداری_اور_قابو_رو} ہی حاصل ہوا ہے۔اسی طرح کلکٹر  اور ایمٹر سروں پر کرخوف کے قانون برائے برقی رو کی مدد سے ہم لکھ سکتے ہیں۔
 \begin{align}
 i_C&=i_T-i_{D_{BC}}=I_S \left(e^{\frac{v_{BE}}{V_T}}-e^{\frac{v_{BC}}{V_T}} \right )-\frac{I_S}{\beta_R} \left(e^{\frac{v_{BC}}{V_T}}-1 \right )\\
 i_E&=i_T+i_{D_{BE}} =I_S \left(e^{\frac{v_{BE}}{V_T}}-e^{\frac{v_{BC}}{V_T}} \right )-\frac{I_S}{\beta_F} \left(e^{\frac{v_{BE}}{V_T}}-1 \right )
@@ -2483,7 +2483,7 @@ r_e =\left. \frac{\partial i_E}{\partial v_{BE}} \right |_Q^{-1}
 \end{align}
 
 \جزوحصہ{تحلیلی تجزیہ}
-اس حصے میں \اصطلاح{ارلی برقی  دباو} \عددی{V_A}  کو نظر انداز کیا جائے گا نتیجتاً  \عددی{v_{CE}} کا \عددی{i_C} پر کوئی اثر نہیں ہو گا۔اس اثر کو بعد میں شامل کیا جائے گا۔شکل  \حوالہ{شکل_نکتہ_مائل_پر_ٹرانزسٹر_کی_کارکردگی} الف کے لئے مساوات \حوالہ{مساوات_ٹرانزسٹر_کی_بنیادی_مساوات} اور کرچاف کا قانون استعمال کرتے ہوئے ہم لکھ سکتے ہیں
+اس حصے میں \اصطلاح{ارلی برقی  دباو} \عددی{V_A}  کو نظر انداز کیا جائے گا نتیجتاً  \عددی{v_{CE}} کا \عددی{i_C} پر کوئی اثر نہیں ہو گا۔اس اثر کو بعد میں شامل کیا جائے گا۔شکل  \حوالہ{شکل_نکتہ_مائل_پر_ٹرانزسٹر_کی_کارکردگی} الف کے لئے مساوات \حوالہ{مساوات_ٹرانزسٹر_کی_بنیادی_مساوات} اور کرخوف کا قانون استعمال کرتے ہوئے ہم لکھ سکتے ہیں
 \begin{align}
 I_C&=I_S e^{\frac{V_{BE}}{V_T}} \label{مساوات_ٹرانزسٹر_یک_سمتی_رو_الف}\\
 V_{CE}&=V_{CC}-I_C R_C \label{مساوات_ٹرانزسٹر_یک_سمتی_دباو_الف}
@@ -2832,7 +2832,7 @@ i_C=0.04 \times 0.1=\SI{4}{\milli \ampere}
 \begin{align*}
 v_L=-i_C \times 10000=-0.004 \times 10000=\SI{-4}{\volt}
 \end{align*}
-حاصل ہوتا ہے۔\عددی{E} جوڑ پر کرچاف کے قانون برائے برقی رو کی مدد سے 
+حاصل ہوتا ہے۔\عددی{E} جوڑ پر کرخوف کے قانون برائے برقی رو کی مدد سے 
 \begin{align*}
 i_E=i_B+i_C=\SI{4.1}{\milli \ampere}
 \end{align*}
@@ -2870,7 +2870,7 @@ i_E=i_B+i_C=\SI{4.1}{\milli \ampere}
 \جزوحصہ{ٹی  \تحریر{T} ریاضی نمونہ } \شناخت{حصہ_ٹرانزسٹر_ٹی_ماڈل}
 گزشتہ حصے میں ہم نے دیکھا کہ پائے ریاضی نمونہ  کو حل کرنے سے ٹرانزسٹر کے مساوات (یعنی مساوات \حوالہ{مساوات_ٹرانزسٹر_باریک_اشارات_کلکٹر _رو}  اور مساوات \حوالہ{مساوات_ٹرانزسٹر_باریک_اشارات_قابو_رو} ) حاصل ہوتے ہیں اور یوں اسے ٹرانزسٹر کا ریاضی نمونہ  تصور کیا جا سکتا ہے۔پائے ریاضی نمونے  کے علاوہ بھی ادوار بنائے جا سکتے ہیں جن سے انہیں مساوات کا حصول ممکن ہے۔ایسے تمام ادوار کو بھی ٹرانزسٹر کے ریاضی نمونے  تصور کیا جا سکتا ہے۔ان میں \تحریر{T} ریاضی نمونہ \حاشیہد{ٹی ریاضی نمونے  کی شکل انگریزی کے حروف تہجی \تحریر{T} کی مانند ہے۔اسی لئے اس کو ٹی ریاضی نمونہ  کہتے ہیں۔} خاصہ مقبول ہے۔\اصطلاح{ایمٹر مشترک}\حاشیہد{مشترک ایمٹر، مشترک کلکٹر  اور مشترک بیس کی پہچان حصہ \حوالہ{حصہ_ٹرانزسٹر_مخارج_کلکٹر _قابو_مشترک} میں کی گئی ہے} اور \اصطلاح{کلکٹر  مشترک }  ادوار حل کرتے ہوئے عموماً پائے ریاضی نمونے  ہی استعمال کیا جاتا ہے جبکہ \اصطلاح{بیس مشترک } ادوار کو \تحریر{T} ریاضی نمونے  کی مدد سے زیادہ آسانی سے حل کرنا ممکن ہوتا ہے۔\عددیء{r_o} کو نظر انداز کرتے ہوئے  \تحریر{npn} کے \تحریر{T} ریاضی نمونے  کے مختلف اشکال کو شکل \حوالہ{شکل_ٹی_ماڈل} میں دکھایا گیا ہے۔انہیں ریاضی نمونے  میں \عددیء{C} اور \عددیء{E} کے مابین \عددیء{r_o} نسب کرتے ہوئے \عددیء{r_o} کے اثر کو بھی شامل کیا جا سکتا ہے۔
 
-شکل \حوالہ{شکل_ٹی_ماڈل} الف میں چونکہ \عددی{C} سرے کے ساتھ تابع منبع روسلسلہ وار جڑا ہے لہٰذا  \عددی{i_c = g_m v_{be}} ہو گا۔ اُوہم کے قانون کے مطابق اگر  \عددی{r_e} پر \عددی{v_{be}} برقی دباو پایا جائے تو \عددی{i_e =\frac{v_{be}}{r_e}}  ہو گا۔کرچاف کے قانون برائے برقی دباو کے تحت \عددی{i_b = i_e  -  i_c} ہو گا۔آئیں اس کی قیمت حاصل کریں۔
+شکل \حوالہ{شکل_ٹی_ماڈل} الف میں چونکہ \عددی{C} سرے کے ساتھ تابع منبع روسلسلہ وار جڑا ہے لہٰذا  \عددی{i_c = g_m v_{be}} ہو گا۔ اُوہم کے قانون کے مطابق اگر  \عددی{r_e} پر \عددی{v_{be}} برقی دباو پایا جائے تو \عددی{i_e =\frac{v_{be}}{r_e}}  ہو گا۔کرخوف کے قانون برائے برقی دباو کے تحت \عددی{i_b = i_e  -  i_c} ہو گا۔آئیں اس کی قیمت حاصل کریں۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{Tmodel}
@@ -2910,7 +2910,7 @@ i_b&=i_e-i_c\\
 \label{شکل_پائے_ماڈل_بمع_خارجی_مزاحمت}
 \end{figure}
 \حصہ{یک سمتی اور بدلتے متغیرات کی علیحدگی}
-شکل \حوالہ{شکل_ٹرانزسٹر_یک_سمتی_اور_بدلتے_متغیرات_کی_علیحدگی} الف میں ٹرانزسٹر کا یک سمتی دور دکھایا گیا ہے جہاں \عددی{V_{BE}} ٹرانزسٹر کا نقطہ کارکردگی تعین کرتا ہے۔شکل  ب میں \عددی{V_{BE}} کے ساتھ سلسلہ وار باریک اشارہ \عددی{v_{be}} جوڑا گیا ہے جس کی وجہ سے ٹرانزسٹر نقطہ مائل کے قریب-قریب \عددی{i_C  -  v_{BE}} خط پر چال قدمی کرتا ہے۔شکل  الف   میں تمام متغیرات یک سمتی ہیں لہٰذا \عددی{i_C} کو \عددی{I_C} اور \عددی{v_{BE}} کو \عددی{V_{BE}} لکھا جائے گا۔یوں مساوات \حوالہ{مساوات_ٹرانزسٹر_کی_بنیادی_مساوات} اور کرچاف کا قانون برائے برقی دباو استعمال کرتے ہوئے شکل  الف   کے لئے ہم لکھ سکتے ہیں۔
+شکل \حوالہ{شکل_ٹرانزسٹر_یک_سمتی_اور_بدلتے_متغیرات_کی_علیحدگی} الف میں ٹرانزسٹر کا یک سمتی دور دکھایا گیا ہے جہاں \عددی{V_{BE}} ٹرانزسٹر کا نقطہ کارکردگی تعین کرتا ہے۔شکل  ب میں \عددی{V_{BE}} کے ساتھ سلسلہ وار باریک اشارہ \عددی{v_{be}} جوڑا گیا ہے جس کی وجہ سے ٹرانزسٹر نقطہ مائل کے قریب-قریب \عددی{i_C  -  v_{BE}} خط پر چال قدمی کرتا ہے۔شکل  الف   میں تمام متغیرات یک سمتی ہیں لہٰذا \عددی{i_C} کو \عددی{I_C} اور \عددی{v_{BE}} کو \عددی{V_{BE}} لکھا جائے گا۔یوں مساوات \حوالہ{مساوات_ٹرانزسٹر_کی_بنیادی_مساوات} اور کرخوف کا قانون برائے برقی دباو استعمال کرتے ہوئے شکل  الف   کے لئے ہم لکھ سکتے ہیں۔
 \begin{align}
 I_C&=I_S e^{\frac{V_{BE}}{V_T}} \label{مساوات_ٹرانزسٹر_اشارہ_عدم_موجود_لہذا_یکسمتی_رو}\\
 V_{CE}&=V_{CC}-I_C R_C \label{مساوات_ٹرانزسٹر_اشارہ_عدم_موجود_لہذا_یکسمتی_دباو}
@@ -3218,7 +3218,7 @@ i_b &\\
 i_c&=\beta i_b\\
 i_e&=i_b+i_c = \left(\beta+1 \right )i_b
 \end{align*}
-یوں شکل  ب میں داخلی جانب کے دائرے میں کرچاف کے قانون برائے برقی دباو کے استعمال سے ہم لکھ سکتے ہیں۔
+یوں شکل  ب میں داخلی جانب کے دائرے میں کرخوف کے قانون برائے برقی دباو کے استعمال سے ہم لکھ سکتے ہیں۔
 \begin{align*}
 v_s&=i_b R_B+i_b r_{\pi} + \left(\beta+1 \right ) i_b R_E\\
 &=i_b \left(R_B+r_{\pi}+\left(\beta+1 \right )R_E \right )
@@ -3258,7 +3258,7 @@ A_v&=-\frac{\beta}{\beta+1}\frac{R_C}{\frac{R_B}{\beta+1} +r_{e}+R_E}\\
 v_E=\left(\beta+1 \right) i_b \times R_E =i_b \times \left(\beta+1 \right)R_E
 \end{align*}
 
-شکل \حوالہ{شکل_ایمپلیفائر_بمع_مخارجی_مزاحمت} پ کے داخلی دائرے پر کرچاف کا قانون برائے برقی دباو استعمال کرنے سے
+شکل \حوالہ{شکل_ایمپلیفائر_بمع_مخارجی_مزاحمت} پ کے داخلی دائرے پر کرخوف کا قانون برائے برقی دباو استعمال کرنے سے
 \begin{align*}
 v_s = i_b R_B+i_b r_{\pi}  + i_b \left(\beta+1 \right )R_E
 \end{align*}
@@ -4288,7 +4288,7 @@ R_{th}&=\frac{50000 \times 200000}{50000+200000}=\SI{40}{\kilo \ohm}
 \caption{دو کڑی یک سمتی زنجیری ایمپلیفائر}
 \label{شکل_دو_کڑی_زنجیری_یکسمتی_ایمپلیفائر_مثبت_منفی_مثبت_الف}
 \end{figure}
-حاصل ہوتے ہیں جنہیں استعمال کرتے ہوئے شکل \حوالہ{شکل_دو_کڑی_زنجیری_یکسمتی_ایمپلیفائر_مثبت_منفی_مثبت_الف} الف حاصل ہوتا ہے۔شکل \حوالہ{شکل_دو_کڑی_زنجیری_یکسمتی_ایمپلیفائر_مثبت_منفی_مثبت_الف} الف میں \عددی{Q_1} کے داخلی جانب کرچاف کے قانون برائے برقی دباو کی مدد سے
+حاصل ہوتے ہیں جنہیں استعمال کرتے ہوئے شکل \حوالہ{شکل_دو_کڑی_زنجیری_یکسمتی_ایمپلیفائر_مثبت_منفی_مثبت_الف} الف حاصل ہوتا ہے۔شکل \حوالہ{شکل_دو_کڑی_زنجیری_یکسمتی_ایمپلیفائر_مثبت_منفی_مثبت_الف} الف میں \عددی{Q_1} کے داخلی جانب کرخوف کے قانون برائے برقی دباو کی مدد سے
 \begin{align*}
 2+40000\times I_B+0.7+2000\times I_E-5=0
 \end{align*}
@@ -4303,7 +4303,7 @@ V_{E1}&=I_{E1} R_{E1}-5\\
 &=0.95833 \times 10^{-3} \times 2000-5\\
 &=\SI{-3.08}{\volt}
 \end{align*}
-حاصل ہوتا ہے۔\عددی{Q_1} کے کلکٹر  جانب برقی رو \عددی{I_{C1}} کے دو راستے ہیں۔پہلا راستہ \عددی{R_{C1}} کے ذریعے اور دوسرا راستہ \عددی{Q_2} سے ہوتے ہوئے \عددی{R_{E2}} کے ذریعے۔یوں کرچاف کے قانون برائے برقی رو کے استعمال سے
+حاصل ہوتا ہے۔\عددی{Q_1} کے کلکٹر  جانب برقی رو \عددی{I_{C1}} کے دو راستے ہیں۔پہلا راستہ \عددی{R_{C1}} کے ذریعے اور دوسرا راستہ \عددی{Q_2} سے ہوتے ہوئے \عددی{R_{E2}} کے ذریعے۔یوں کرخوف کے قانون برائے برقی رو کے استعمال سے
 \begin{gather}
 \begin{aligned}\label{مساوات_ٹرانزسٹر_مثال_زنجیری_مکس_پہلا}
 I_{C1}&=I_{RC1}+I_{B2}\\
@@ -4498,7 +4498,7 @@ R_3=\SI{10}{\kilo \ohm}, \hspace{5mm} r_{be}=\SI{1}{\kilo \ohm}, \hspace{5mm} \b
 \label{شکل_ٹرانزسٹر_کلکٹر _مشترک_زیادہ_داخلی_مزاحمت_مساوی}
 \end{figure}
 
-حل:شکل \حوالہ{شکل_ٹرانزسٹر_کلکٹر _مشترک_زیادہ_داخلی_مزاحمت_مساوی} میں مساوی باریک اشاراتی دور دکھایا گیا ہے۔جوڑ \عددی{v_e} پر کرچاف کے قانون برائے برقی رو سے
+حل:شکل \حوالہ{شکل_ٹرانزسٹر_کلکٹر _مشترک_زیادہ_داخلی_مزاحمت_مساوی} میں مساوی باریک اشاراتی دور دکھایا گیا ہے۔جوڑ \عددی{v_e} پر کرخوف کے قانون برائے برقی رو سے
 \begin{align}\label{مساوات_ٹرانزسٹر_بوٹسٹریپ_الف}
 \frac{v_e-v_t}{R_3}+\frac{v_e-v_t}{r_{be}}+\frac{v_e}{R_1}+\frac{v_e}{R_2}+\frac{v_e}{R_E}=g_m \left(v_t-v_e \right)
 \end{align}
@@ -4765,7 +4765,7 @@ r_e& \approx \frac{1}{g_m}=\frac{1}{0.04}=\SI{25}{\ohm}
 \begin{align}
 i_{R1}=\frac{V_{CC}-V_{Z0}}{R_1}
 \end{align}
-ہو گا۔\عددی{i_B=\SI{0}{\ampere}} کی صورت میں کرچاف کے قانون برائے برقی رو \عددی{i_{R1}=i_B+i_Z} سے  \عددی{i_Z=i_{R1}} حاصل ہوتا ہے۔اب تصور کریں کہ \عددی{R_L} کی قیمت محدود اور \عددی{\SI{0}{\ohm}} سے زیادہ یعنی \عددی{\infty > R_L > \SI{0}{\ohm}} ہے۔اب بھی \عددی{i_{R1}} مندرجہ بالا مساوات سے ہی حاصل ہو گی۔البتہ \عددی{i_L=\tfrac{v_L}{R_L}} اور \عددی{i_B=\tfrac{i_L}{\beta +1}} ہوں گے۔یوں 
+ہو گا۔\عددی{i_B=\SI{0}{\ampere}} کی صورت میں کرخوف کے قانون برائے برقی رو \عددی{i_{R1}=i_B+i_Z} سے  \عددی{i_Z=i_{R1}} حاصل ہوتا ہے۔اب تصور کریں کہ \عددی{R_L} کی قیمت محدود اور \عددی{\SI{0}{\ohm}} سے زیادہ یعنی \عددی{\infty > R_L > \SI{0}{\ohm}} ہے۔اب بھی \عددی{i_{R1}} مندرجہ بالا مساوات سے ہی حاصل ہو گی۔البتہ \عددی{i_L=\tfrac{v_L}{R_L}} اور \عددی{i_B=\tfrac{i_L}{\beta +1}} ہوں گے۔یوں 
 \begin{align*}
 i_Z&=i_{R1}-i_B\\
 &=\frac{V_{CC}-V_{Z0}}{R_1}-\frac{i_L}{\beta+1}
@@ -4805,7 +4805,7 @@ i_Z&=i_{R1}-i_B\\
 \begin{align*}
 i_I=\frac{v_I}{R}
 \end{align*}
-لکھا جا سکتا ہے۔کرچاف کے قانون برائے برقی رو سے \عددی{i_I=i_C} ہو گا جہاں مساوات \حوالہ{مساوات_ٹرانزسٹر_کی_بنیادی_مساوات} کے تحت
+لکھا جا سکتا ہے۔کرخوف کے قانون برائے برقی رو سے \عددی{i_I=i_C} ہو گا جہاں مساوات \حوالہ{مساوات_ٹرانزسٹر_کی_بنیادی_مساوات} کے تحت
 \begin{align*}
 i_C \approx I_S e^{\frac{v_{BE}}{V_T}}
 \end{align*}
@@ -4832,7 +4832,7 @@ v_O=-V_T \ln \frac{v_I}{I_S R}
 
 شکل \حوالہ{شکل_ٹرانزسٹر_شاٹکی} الف میں ٹرانزسٹر کے بیس اور کلکٹر  کے درمیان \اصطلاح{شاٹکی ڈایوڈ} نسب کیا گیا ہے۔ایسا کرنے سے \اصطلاح{شاٹکی ٹرانزسٹر}\فرہنگ{شاٹکی ٹرانزسٹر}\حاشیہب{Schottky transistor}\فرہنگ{schottky!transistor} وجود میں آتا ہے جس کی علامت شکل  ب میں دکھائی گئی ہے۔\اصطلاح{شاٹکی ٹرانزسٹر} کی کارکردگی شکل \حوالہ{شکل_ٹرانزسٹر_شاٹکی_ایمپلیفائر} میں دئے ایمپلیفائر کی مدد سے دیکھتے ہیں۔چالو ٹرانزسٹر کا \عددی{V_{BE}=\SI{0.7}{\volt}} ہوتا ہے۔اگر ٹرانزسٹر افزائندہ حال میں ہو تب شاٹکی ڈایوڈ الٹا مائل ہو گا اور اس کا کوئی کردار نہیں ہو گا البتہ اگر ٹرانزسٹر غیر افزائندہ ہونے کی کوشش کرے تب \عددی{V_{CE}}  کم ہو کر  شاٹکی ڈایوڈ کو سیدھا مائل کر دے گا۔یہی صورت حال شکل میں دکھائی گئی ہے۔یہیں سے ایک اہم حقیقت واضح ہوتی ہے۔چونکہ سیدھے مائل شاٹکی ڈایوڈ پر \عددی{\SI{0.3}{\volt}} پائے جاتے ہیں لہٰذا ٹرانزسٹر کا \عددی{V_{BC}} بھی \عددی{\SI{0.3}{\volt}} پر ہو گا۔آپ جانتے ہیں کہ \عددی{pn} جوڑ کو چالو کرنے کی خاطر کم از کم \عددی{\SI{0.5}{\volt}} درکار ہوتے ہیں لہٰذا \عددی{BC} جوڑ چالو حالت میں نہیں ہو گا۔غیر چالو جوڑ کی برقی رو قابل نظر انداز ہوتی ہے۔یوں صفحہ \حوالہصفحہ{مساوات_ڈایوڈ_نفوذی_کپیسٹر} پر دئے مساوات \حوالہ{مساوات_ڈایوڈ_نفوذی_کپیسٹر} کے تحت اس جوڑ کی \اصطلاح{نفوذی کپیسٹنس} بھی قابل نظر انداز ہو گی۔کپیسٹر کے کم ہونے کی وجہ سے یہ ٹرانزسٹر زیادہ رفتار پر کام کر پائے گا۔
 
-کرچاف کے قانون برائے برقی دباو سے ہم دیکھتے ہیں کہ
+کرخوف کے قانون برائے برقی دباو سے ہم دیکھتے ہیں کہ
 \begin{align*}
 V_{BE}=V_{CE}+V_D
 \end{align*}
@@ -4843,7 +4843,7 @@ V_{BE}=V_{CE}+V_D
 I_{RB}&=\frac{V_{BB}-V_{BE}}{R_B}=\frac{9.7-0.7}{10000}=\SI{0.9}{\milli \ampere}\\
 I_{RC}&=\frac{V_{CC}-V_{CE}}{R_C}=\frac{9.4-0.4}{1200}=\SI{7.5}{\milli \ampere}
 \end{align*}
-حاصل ہوتے ہیں۔مزید کرچاف کے قانون برائے برقی رو سے ہم دیکھتے ہیں کہ
+حاصل ہوتے ہیں۔مزید کرخوف کے قانون برائے برقی رو سے ہم دیکھتے ہیں کہ
 \begin{align*}
 I_C=I_D+I_{RC}\\
 I_D=I_{RB}-I_B
