--- a/tex/electronicsDifferencePair.tex
+++ b/tex/electronicsDifferencePair.tex
@@ -8,7 +8,7 @@
 \begin{align}
 v_{E1}=v_{E2}=v_E
 \end{align}
-مزید یہ کہ اس جوڑ پر پیدا  کار برقی رو کی برقی رو \عددی{i_{E1}}  اور \عددی{i_{E2}} میں تقسیم ہو گی جس کے لئے کرچاف کے قانون برائے برقی رو کے تحت لکھا سکتا ہے
+مزید یہ کہ اس جوڑ پر پیدا  کار برقی رو کی برقی رو \عددی{i_{E1}}  اور \عددی{i_{E2}} میں تقسیم ہو گی جس کے لئے کرخوف کے قانون برائے برقی رو کے تحت لکھا سکتا ہے
 \begin{align} \label{مساوات_تفرقی_کل_رو_قطعی}
 i_{E1}+i_{E2}=2 \times I
 \end{align}
@@ -136,7 +136,7 @@ v_o&=v_{C2}-v_{C1}=-2 \alpha I R_C
 ہوں گے۔شکل \حوالہ{شکل_تفرقی_اشارے_کی_موجودگی_میں_تفرقی_جوڑے_کی_کارکردگی} الف میں ہم نے دیکھا کہ \عددی{v_d=v_{B1}-v_{B2}=\SI{+0.9}{\volt}} کی صورت میں تفرقی جوڑا تمام کی تمام برقی رو (یعنی \عددی{2 \times I}) کو ایک ٹرانزسٹر میں منتقل کر چکا ہوتا ہے اور یوں یہ \عددی{v_o=+2 \alpha I R_C}  خارج کرتا ہے جبکہ شکل  ب میں \عددی{v_d=\SI{-0.9}{\volt}} ہیں اور تفرقی جوڑا تمام کی تمام برقی رو کو دوسرے ٹرانزسٹر میں منتقل کر کے \عددی{v_o=-2 \alpha I R_C}  خارج کرتا ہے۔
 
 \حصہ{باریک داخلی تفرقی اشارہ پر تفرقی جوڑے کی بنیادی کارکردگی}
-کرچاف کے قانون برائے برقی رو کے تحت \عددی{i_{E1}+i_{E2}=2 \times I} رہے گا۔اب تصور کریں کہ تفرقی جوڑے کو باریک تفرقی اشارہ \عددی{v_d} مہیا کیا جاتا ہے۔باریک تفرقی اشارہ سے مراد اتنی \عددی{v_d} ہے جس سے تمام کی تمام برقی رو \عددی{2 \times I}  کسی ایک ٹرانزسٹر میں منتقل نہ ہو۔ جیسا شکل \حوالہ{شکل_باریک_تفرقی_اشارے_پر_صورت_حال}  میں دکھایا گیا ہے، ہم اس صورت کو یوں بیان کر سکتے ہیں کہ  \عددی{+\frac{v_d}{2}}  اشارہ بطور \عددی{v_{B1}} اور  \عددی{-\frac{v_d}{2}} اشارہ بطور \عددی{v_{B2}} مہیا کیا جاتا ہے یعنی
+کرخوف کے قانون برائے برقی رو کے تحت \عددی{i_{E1}+i_{E2}=2 \times I} رہے گا۔اب تصور کریں کہ تفرقی جوڑے کو باریک تفرقی اشارہ \عددی{v_d} مہیا کیا جاتا ہے۔باریک تفرقی اشارہ سے مراد اتنی \عددی{v_d} ہے جس سے تمام کی تمام برقی رو \عددی{2 \times I}  کسی ایک ٹرانزسٹر میں منتقل نہ ہو۔ جیسا شکل \حوالہ{شکل_باریک_تفرقی_اشارے_پر_صورت_حال}  میں دکھایا گیا ہے، ہم اس صورت کو یوں بیان کر سکتے ہیں کہ  \عددی{+\frac{v_d}{2}}  اشارہ بطور \عددی{v_{B1}} اور  \عددی{-\frac{v_d}{2}} اشارہ بطور \عددی{v_{B2}} مہیا کیا جاتا ہے یعنی
 \begin{align*}
 v_{B1}&=+\frac{v_d}{2}\\
 v_{B2}&=-\frac{v_d}{2}
@@ -453,7 +453,7 @@ R_{id}=\frac{v_d}{i_b}=\left(\beta+1 \right ) \left(2 r_e+2 R_E \right )
 \caption{باریک اشاراتی مزاحمت کو زیرِ نظر رکھتے ہوئے داخلی تفرقی مزاحمت}
 \label{شکل_باریک_اشاراتی_مزاحمت_کو_زیر_نظر}
 \end{figure}
-ٹرانزسٹروں کے ایمٹر سرے کا برقی دباو \عددی{v_e} حاصل کرنے کی خاطر اس جوڑ پر کرچاف کا قانون برائے برقی رو نافذ کرتے ہیں۔
+ٹرانزسٹروں کے ایمٹر سرے کا برقی دباو \عددی{v_e} حاصل کرنے کی خاطر اس جوڑ پر کرخوف کا قانون برائے برقی رو نافذ کرتے ہیں۔
 \begin{align}
 \frac{v_e - \frac{v_d}{2}}{r_e} + \frac{v_e + \frac{v_d}{2}}{r_e} +\frac{v_e}{R}=0
 \end{align}
@@ -757,7 +757,7 @@ I_{B1}&=\frac{I_{C1}}{\beta}=\frac{I_C}{\beta}\\
 I_{B2}&=\frac{I_{C2}}{\beta}=\frac{I_C}{\beta}
 \end{aligned}
 \end{gather}
-بائیں بازو کرچاف کے قانون برائے برقی رو کے تحت
+بائیں بازو کرخوف کے قانون برائے برقی رو کے تحت
 \begin{align}
 I_{\textup{حوالہ}}=I_C+\frac{2 I_C}{\beta}=I_C \left(1+\frac{2}{\beta} \right )
 \end{align}
@@ -925,7 +925,7 @@ I_{\textup{عکس}}=\frac{I_{\textup{حوالہ}}}{1+\frac{n+1}{\beta}}
 \caption{ٹرانزسٹر بوجھ سے لدا دو جوڑ ٹرانزسٹر والا تفرقی ایمپلیفائر}
 \label{شکل_ٹرانزسٹر_بار_سے_لدھا_تفرقی_جوڑا}
 \end{figure}
-اب تصور کریں کہ تفرقی برقی اشارہ \عددی{v_d} مہیا کیا جاتا ہے۔ \عددی{Q_{a1}} اور  \عددی{Q_{a2}} میں بدلتی برقی رو \عددی{g_m \frac{v_d}{2}} پیدا ہو گی جن کی سمتیں شکل میں دکھائی گئی ہیں۔\عددی{Q_{a1}}  کا برقی رو (یعنی \عددی{g_m \frac{v_d}{2}} ) ٹرانزسٹر  \عددی{Q_{b1}} سے بھی گزرتا ہے اور یوں \عددی{Q_{b2}}  اس کا عکس پیدا کرے گا جیسا کہ شکل میں دکھایا گیا ہے۔جوڑ \عددی{v_o} میں دو اطراف سے \عددی{g_m \frac{v_d}{2}}  کی برقی رو داخل ہوتی ہے۔یوں اس جوڑ پر کل داخلی برقی رو کی مقدار \عددی{g_m v_d}  ہے۔ کرچاف کے قانون برائے برقی رو کے مطابق اتنی ہی برقی رو اس جوڑ سے باہر نکلے گی۔یوں بوجھ \عددی{R_L} میں \عددی{g_m v_d} برقی رو زمین کی جانب گزرے گی اور یوں
+اب تصور کریں کہ تفرقی برقی اشارہ \عددی{v_d} مہیا کیا جاتا ہے۔ \عددی{Q_{a1}} اور  \عددی{Q_{a2}} میں بدلتی برقی رو \عددی{g_m \frac{v_d}{2}} پیدا ہو گی جن کی سمتیں شکل میں دکھائی گئی ہیں۔\عددی{Q_{a1}}  کا برقی رو (یعنی \عددی{g_m \frac{v_d}{2}} ) ٹرانزسٹر  \عددی{Q_{b1}} سے بھی گزرتا ہے اور یوں \عددی{Q_{b2}}  اس کا عکس پیدا کرے گا جیسا کہ شکل میں دکھایا گیا ہے۔جوڑ \عددی{v_o} میں دو اطراف سے \عددی{g_m \frac{v_d}{2}}  کی برقی رو داخل ہوتی ہے۔یوں اس جوڑ پر کل داخلی برقی رو کی مقدار \عددی{g_m v_d}  ہے۔ کرخوف کے قانون برائے برقی رو کے مطابق اتنی ہی برقی رو اس جوڑ سے باہر نکلے گی۔یوں بوجھ \عددی{R_L} میں \عددی{g_m v_d} برقی رو زمین کی جانب گزرے گی اور یوں
 
 \begin{align} \label{مساوات_تفرقی_ٹرانزسٹر_سے_لدھے_تفرقی_جوڑے_کا_مخارج}
 v_o=\left(g_m \frac{v_d}{2}+g_m \frac{v_d}{2} \right )R_L=g_m R_L v_d
@@ -1291,7 +1291,7 @@ I_{\textrm{عکس}} R_E=V_T \ln \left(\frac{I_{\textrm{حوالہ}}}{I_{\textrm{
 \caption{وائڈلر منبع رو کا باریک اشاراتی مساوی دور}
 \label{شکل_تفرقی_وائڈلر_پیداکار_برقی_رو_مساوی}
 \end{figure}
-اس برقی رو کی سمت شکل میں دکھائی گئی ہے۔کرچاف کے قانون برائے برقی رو کی مدد سے
+اس برقی رو کی سمت شکل میں دکھائی گئی ہے۔کرخوف کے قانون برائے برقی رو کی مدد سے
 \begin{align*}
 g_m v_{be}+\frac{v_{be}}{R_E'}=i_{ro} 
 \end{align*}
@@ -1299,11 +1299,11 @@ g_m v_{be}+\frac{v_{be}}{R_E'}=i_{ro}
 \begin{align*}
 i_{ro}=\left(g_m +\frac{1}{R_E'} \right) v_{be}
 \end{align*}
-حاصل ہوتا ہے۔یوں کرچاف کے قانون برائے برقی دباو کی مدد سے
+حاصل ہوتا ہے۔یوں کرخوف کے قانون برائے برقی دباو کی مدد سے
 \begin{align}\label{مساوات_تفرقی_وائڈلر_ٹیسٹ_برقی_دباو}
 v_t=-v_{be}-\left(g_m +\frac{1}{R_E'} \right) v_{be} r_o
 \end{align}
-اور کرچاف کے قانون برائے برقی رو کی مدد سے
+اور کرخوف کے قانون برائے برقی رو کی مدد سے
 \begin{align}\label{مساوات_تفرقی_وائڈلر_ٹیسٹ_برقی_رو}
 i_t=g_m v_{be}-\left(g_m +\frac{1}{R_E'} \right) v_{be}
 \end{align}
@@ -1372,9 +1372,9 @@ i_{B3}&=\frac{i_{C3}}{\beta}\\
 i_{E3}&=\left(\frac{\beta+1}{\beta}\right) i_{C3}
 \end{aligned}
 \end{gather}
-لکھا جا سکتا ہے۔کرچاف کے قانون برائے برقی رو کے تحت
+لکھا جا سکتا ہے۔کرخوف کے قانون برائے برقی رو کے تحت
 \begin{gather}
-\begin{aligned}\label{مساوات_تفرقی_ولسن_کرچاف_کا_قانون}
+\begin{aligned}\label{مساوات_تفرقی_ولسن_کرخوف_کا_قانون}
 i_{E3}&=i_{C1}+i_{B1}+i_{B2}\\
 &=i_C+2 i_B\\
 &=\left(\frac{\beta+2}{\beta} \right) i_C
@@ -1388,7 +1388,7 @@ i_{E3}&=i_{C1}+i_{B1}+i_{B2}\\
 \begin{align}\label{مساوات_تفرقی_محاصل_رو_کی_مساوات}
 i_C=\left(\frac{\beta+1}{\beta+2}\right) i_{C3}
 \end{align}
-کرچاف کے قانون برائے برقی رو کی مدد سے 
+کرخوف کے قانون برائے برقی رو کی مدد سے 
 \begin{align*}
 I_{\textrm{حوالہ}}&=i_{C2}+i_{B3}\\
 &=i_{C}+\frac{i_{C3}}{\beta}
@@ -1421,7 +1421,7 @@ I_{\textrm{عکس}} \approx \left[\frac{1}{1+\frac{2}{\beta^2 }} \right] I_{\tex
 \label{شکل_تفرقی_ولسن_آئینے_کی_خارجی_مزاحمت}
 \end{figure}
 
-آئیں آئینے کی خارجی مزاحمت حاصل کریں۔ایسا کرنے کی خاطر \عددیء{Q_3} کے کلکٹر پر \عددیء{v_t} لاگو کرتے ہوئے \عددیء{i_t} کا حساب لگاتے ہیں۔\عددیء{\tfrac{v_t}{i_t}} خارجی مزاحمت \عددیء{R_o} ہو گا۔\عددیء{Q_3} کا پائے ریاضی نمونہ استعمال کرتے ہوئے ولسن آئینے کو شکل \حوالہ{شکل_تفرقی_ولسن_آئینے_کی_خارجی_مزاحمت} میں دکھایا گیا ہے۔نقطہ دار دائرے سے  دو جگہ \عددیء{i_c} برقی رو خارج اور ایک جگہ \عددیء{i_t} داخلی ہو رہی ہے۔یوں کرچاف کے قانون برائے برقی رو کی مدد سے ہم لکھ سکتے ہیں
+آئیں آئینے کی خارجی مزاحمت حاصل کریں۔ایسا کرنے کی خاطر \عددیء{Q_3} کے کلکٹر پر \عددیء{v_t} لاگو کرتے ہوئے \عددیء{i_t} کا حساب لگاتے ہیں۔\عددیء{\tfrac{v_t}{i_t}} خارجی مزاحمت \عددیء{R_o} ہو گا۔\عددیء{Q_3} کا پائے ریاضی نمونہ استعمال کرتے ہوئے ولسن آئینے کو شکل \حوالہ{شکل_تفرقی_ولسن_آئینے_کی_خارجی_مزاحمت} میں دکھایا گیا ہے۔نقطہ دار دائرے سے  دو جگہ \عددیء{i_c} برقی رو خارج اور ایک جگہ \عددیء{i_t} داخلی ہو رہی ہے۔یوں کرخوف کے قانون برائے برقی رو کی مدد سے ہم لکھ سکتے ہیں
 \begin{align}\label{مساوات_تفرقی_ولسن_ٹیست_برقی_رو}
 i_t=2 i_c
 \end{align}
@@ -1438,7 +1438,7 @@ i_t=2 i_c
 v_e&=i_c r_e\\
 i_{b3}&=i_c
 \end{align*}
-لکھا جا سکتا ہے۔ساتھ ہی ساتھ کرچاف کے قانون برائے برقی رو کی مدد سے
+لکھا جا سکتا ہے۔ساتھ ہی ساتھ کرخوف کے قانون برائے برقی رو کی مدد سے
 \begin{align*}
 i_t&=\beta i_{b3} +\frac{v_t-v_e}{r_{o3}}\\
 &=-\beta i_c +\frac{v_t}{r_{o3}}-\frac{v_e}{r_{o3}}\\
@@ -1534,7 +1534,7 @@ v_d&=\left(v_{GS1}+v_S \right)-\left(v_{GS2}+v_S \right)\\
 &=v_{GS1}-v_{GS2}
 \end{aligned}
 \end{gather}
-لکھا جا سکتا ہے۔دھیان رہے کہ \عددی{v_{G1}} اور \عددی{v_{G2}} تبدیل کرنے سے \عددی{v_S} بھی تبدیل ہوتا ہے۔بدلتے اشارے کے عدم موجودگی میں \عددی{v_{GS1}=v_{GS2}=V_{GS}} ہوتا ہے۔اس صورت میں تفرقی جوڑے کے دونوں ماسفیٹ میں برابر یک سمتی برقی رو گزرتی ہے۔تفرقی جوڑے میں کرچاف کے قانون برائے برقی رو کی مدد سے
+لکھا جا سکتا ہے۔دھیان رہے کہ \عددی{v_{G1}} اور \عددی{v_{G2}} تبدیل کرنے سے \عددی{v_S} بھی تبدیل ہوتا ہے۔بدلتے اشارے کے عدم موجودگی میں \عددی{v_{GS1}=v_{GS2}=V_{GS}} ہوتا ہے۔اس صورت میں تفرقی جوڑے کے دونوں ماسفیٹ میں برابر یک سمتی برقی رو گزرتی ہے۔تفرقی جوڑے میں کرخوف کے قانون برائے برقی رو کی مدد سے
 \begin{align}\label{مساوات_تفرقی_دونوں_برقی_رو_کا_مجموعی_قطعی_ہے}
 i_{DS1}+i_{DS2}=2I
 \end{align}
@@ -1981,7 +1981,7 @@ v_2=-\frac{g_{m2} r_{o2} i_t}{g_{m1}}
 \begin{align}\label{مساوات_تفرقی_ماسفیٹ_ولسن_تیسرا_ماسفیٹ}
 v_{gs3}=-\frac{g_{m2} r_{o2} i_t}{g_{m1}}
 \end{align}
-کے برابر ہے۔یوں کرچاف کے قانون برائے برقی رو کی مدد سے
+کے برابر ہے۔یوں کرخوف کے قانون برائے برقی رو کی مدد سے
 \begin{align*}
 i_t&=g_{m3} v_{gs3}+\frac{v_t-v_1}{r_{o3}}\\
 &=-\frac{g_{m2} g_{m3} r_{o2} i_t}{g_{m1}}+\frac{v_t-g_{m1} i_t}{r_{o3}}
@@ -2072,7 +2072,7 @@ v_1&=i_t r_{o2}\\
 v_{gs4}&=-i_t r_{o2}
 \end{aligned}
 \end{gather}
-لکھا جا سکتا ہے۔کرچاف کے قانون برائے برقی رو کی مدد سے
+لکھا جا سکتا ہے۔کرخوف کے قانون برائے برقی رو کی مدد سے
 \begin{align*}
 i_t&=g_{m4} v_{gs4}+\frac{v_t-v_1}{r_{o4}}\\
 &=-i_t g_{m4} r_{o2}+\frac{v_t-i_t r_{o2}}{r_{o4}}
