--- a/tex/electronicsDiode.tex
+++ b/tex/electronicsDiode.tex
@@ -278,7 +278,7 @@ $
 \label{شکل_ڈایوڈ_سیدھا_مائل_الٹا_مائل}
 \end{figure}
 شکل  ب میں برقی دباو \عددی{v_I} ڈایوڈ   کو مائل کرتا ہے کہ یہ برقی رو کو سیدھے رُخ گزرنے دے۔ہم کہتے ہیں کہ ڈایوڈ   \اصطلاح {سیدھے رُخ مائل}  کیا گیا ہے یا کہ ڈایوڈ   \اصطلاح {سیدھا مائل}\فرہنگ{سیدھا مائل}\فرہنگ{forward biased}\حاشیہب{forward biased} کیا گیا ہے۔اس کے برعکس شکل  پ میں برقی دباو \عددی{v_I} ڈایوڈ   میں اُلٹے رُخ برقی رو گزارنے کی کوشش کرتا ہے۔اس صورت میں ہم کہتے ہیں کہ ڈایوڈ   \اصطلاح {اُلٹے رُخ مائل}  کیا گیا ہے یا کہ ڈایوڈ   \اصطلاح {اُلٹا مائل}\فرہنگ{الٹا!مائل}\فرہنگ{reverse biased}\حاشیہب{reverse biased} کیا گیا ہے۔ ڈایوڈ کے سیدھے مائل حال کو \اصطلاح {چالو حال} جبکہ اس کے اُلٹ مائل حال کو \اصطلاح {منقطع حال} بھی کہتے ہیں۔ 
-	شکل  ب کے لئے کرچاف  کی مساوات برائے برقی دباو لکھتے ہیں۔
+	شکل  ب کے لئے کرخوف  کی مساوات برائے برقی دباو لکھتے ہیں۔
 \begin{align} \label{مساوات_ڈایوڈ_سیدھا_مائل_مثال_الف}
 v_I=v_D+i R
 \end{align}
@@ -574,7 +574,7 @@ V_{\textrm{یکسمتی}}=V_p-\frac{\Delta V}{2}
 اس دور کی کارکردگی پچھلے حصہ میں دکھلائے دور کی طرح ہے۔اسے سمجھنے کی خاطر ڈایوڈ   کو کامل ڈایوڈ اور مزاحمت \عددی{R} کو لامحدود تصور کریں۔یہ بھی تصور کریں کہ داخلی اشارہ \عددی{v_I} کے حیطہ \عددی{v_p} کی مقدار خارجی جانب جڑے بیٹری کی برقی دباو \عددی{V_r} سے زیادہ ہے۔
 
 
-خارجی جانب کی برقی دباو \عددی{v_O} پر غور کرتے معلوم ہوتا ہے کہ یہ کسی صورت \عددی{V_r} سے تجاوز نہیں کر سکتا کیوں کہ جب بھی \عددی{v_O} کی مقدار \عددی{V_r} سے تجاوز کرے،  ڈایوڈ سیدھا مائل ہو جائے گا۔سیدھے مائل ڈایوڈ کی صورت میں \عددی{v_O} اور \عددی{V_r} برابر رہیں گے۔کرچاف کے قانون برائے برقی دباو کے تحت سیدھے مائل ڈایوڈ کی صورت میں
+خارجی جانب کی برقی دباو \عددی{v_O} پر غور کرتے معلوم ہوتا ہے کہ یہ کسی صورت \عددی{V_r} سے تجاوز نہیں کر سکتا کیوں کہ جب بھی \عددی{v_O} کی مقدار \عددی{V_r} سے تجاوز کرے،  ڈایوڈ سیدھا مائل ہو جائے گا۔سیدھے مائل ڈایوڈ کی صورت میں \عددی{v_O} اور \عددی{V_r} برابر رہیں گے۔کرخوف کے قانون برائے برقی دباو کے تحت سیدھے مائل ڈایوڈ کی صورت میں
 \begin{align*}
 v_I=v_C+v_D+V_r
 \end{align*}
@@ -642,7 +642,7 @@ i_R=\frac{v_I-V_r}{R}
 \جزوحصہ{ڈایوڈ لاگ ایمپلیفائر}
 حسابی منفی ایمپلیفائر میں مزاحمت کی جگہ ڈایوڈ نسب کرنے سے شکل \حوالہ{شکل_ڈایوڈ_لاگ_ایمپلیفائر} الف کا \اصطلاح {لاگ ایمپلیفائر}\فرہنگ{لاگ ایمپلیفائر}\فرہنگ{log amplifier}\حاشیہب{log amplifier} حاصل ہوتا ہے۔مثبت \عددی{v_i} کی صورت میں \عددی{v_o} منفی ہو گا جس سے \عددی{D_1} سیدھا مائل جبکہ \عددی{D_2} الٹا مائل ہو گا۔اسی طرح منفی  \عددی{v_i} کی صورت میں \عددی{v_o} مثبت ہو گا جس سے \عددی{D_1} الٹا مائل جبکہ \عددی{D_2} سیدھا مائل ہو گا۔یوں کسی بھی وقت ایک ڈایوڈ منقطع رہتا ہے جبکہ دوسرا سیدھا مائل رہتا ہے۔اگرچہ حقیقت میں منفی متغیرہ کا لاگ نہیں پایا جاتا اور یوں دور میں صرف \عددی{D_1} ہونا چاہئے تھا لیکن عموماً دو ڈایوڈ استعمال کئے جاتے ہیں۔یوں داخلی اشارہ  مثبت یا منفی ممکن ہوتا ہے۔
 
-مثبت \عددی{v_i} کی صورت میں حل کرتے ہیں۔حسابی ایمپلیفائر کے مثبت مداخل برقی زمین کے ساتھ جڑا ہے لہٰذا اس پر برقی دباو \عددی{v_k} صفر ہو گا۔منفی مداخل پر برقی دباو \عددی{v_n} لکھتے ہوئے کرچاف کے قانون برائے برقی رو کی مدد سے
+مثبت \عددی{v_i} کی صورت میں حل کرتے ہیں۔حسابی ایمپلیفائر کے مثبت مداخل برقی زمین کے ساتھ جڑا ہے لہٰذا اس پر برقی دباو \عددی{v_k} صفر ہو گا۔منفی مداخل پر برقی دباو \عددی{v_n} لکھتے ہوئے کرخوف کے قانون برائے برقی رو کی مدد سے
 \begin{align*}
 \frac{v_n-v_i}{R}+i_D=0
 \end{align*}
@@ -782,7 +782,7 @@ v_o=-v_i-2 v_1
 
 گزشتہ صفحات میں ڈایوڈ کے ادوار حل کرتے سیدھے مائل ڈایوڈ کو چالو سوئچ جبکہ اُلٹے مائل ڈایوڈ کو منقطع سوئچ تصور کیا جاتا رہا۔ایسا کرنے سے ڈایوڈ کی خاصیت نظر انداز ہو جاتی ہے۔اگرچہ بیشتر مواقع پر ایسا کرنا درست ہوتا ہے، بہر حال کبھی کبھار ڈایوڈ کی خاصیت کو مدِ نظر رکھنا ضروری ہوتا ہے۔اس حصہ میں ایسا ہی کیا جائے گا۔
 
-شکل \حوالہ{شکل_ڈایوڈ_بار_کا_خط}  میں دکھائے گئے دور کو مثال بناتے ہیں۔کرچاف کے قانون برائے برقی دباو کے مطابق اس دور کے لئے ہم یوں لکھ سکتے ہیں۔
+شکل \حوالہ{شکل_ڈایوڈ_بار_کا_خط}  میں دکھائے گئے دور کو مثال بناتے ہیں۔کرخوف کے قانون برائے برقی دباو کے مطابق اس دور کے لئے ہم یوں لکھ سکتے ہیں۔
 \begin{align} \label{مساوات_ڈایوڈ_بار_کا_خط}
 V_B=v_D+i_D R
 \end{align}
@@ -1069,7 +1069,7 @@ R_t= \frac{R_L R_2}{R_L+R_2}
 \frac{1}{Z}&=\frac{1}{R_2}+\frac{1}{R_L+\frac{1}{j \omega C}}\\
 Z&=\frac{R_2 \left(R_L+\frac{1}{j \omega C} \right)}{R_2+R_L+\frac{1}{j \omega C}}
 \end{align}
-کے برابر ہے۔کپیسٹر یک سمتی برقی رو کے لئے کھلے سرے کردار ادا کرتا ہے لہٰذا \عددی{R_L} میں یک سمتی برقی رو کی قیمت صفر ایمپیئر ہو گی اور اس پر یک سمتی برقی دباو کی قیمت بھی صفر وولٹ ہو گا۔کپیسٹر \عددی{C} جوڑ \عددی{a} پر پائے جانے والے یک سمتی برقی دباو کو برداشت کرے گا اور یوں کپیسٹر پر \عددی{V_C=I_D R_2} برقی دباو پایا جائے گا۔کرچاف کے قانون برائے برقی دباو سے لکھا جا سکتا ہے۔
+کے برابر ہے۔کپیسٹر یک سمتی برقی رو کے لئے کھلے سرے کردار ادا کرتا ہے لہٰذا \عددی{R_L} میں یک سمتی برقی رو کی قیمت صفر ایمپیئر ہو گی اور اس پر یک سمتی برقی دباو کی قیمت بھی صفر وولٹ ہو گا۔کپیسٹر \عددی{C} جوڑ \عددی{a} پر پائے جانے والے یک سمتی برقی دباو کو برداشت کرے گا اور یوں کپیسٹر پر \عددی{V_C=I_D R_2} برقی دباو پایا جائے گا۔کرخوف کے قانون برائے برقی دباو سے لکھا جا سکتا ہے۔
 \begin{align} \label{مساوات_ٹرانزسٹر_یکسمتی_منبع_بار_مساوات_جزو}
 V_B=I_D R_1+V_D+I_D R_2
 \end{align}
@@ -1077,7 +1077,7 @@ V_B=I_D R_1+V_D+I_D R_2
 \begin{align}
 i_{R2}=\left(\frac{R_L}{R_L+R_2}\right) i_d
 \end{align}
-یوں \عددی{R_2} میں کل برقی رو کی قیمت \عددی{I_D+i_{R_2}} ہو گی۔کرچاف کے قانون برائے برقی دباو کو بائیں دائرے میں استعمال کرتے ہوئے
+یوں \عددی{R_2} میں کل برقی رو کی قیمت \عددی{I_D+i_{R_2}} ہو گی۔کرخوف کے قانون برائے برقی دباو کو بائیں دائرے میں استعمال کرتے ہوئے
 \begin{align*}
 V_B+v_s&=i_D R_1+v_D+\left(I_D+i_{R2} \right)R_2\\
 &=\left(I_D+i_d \right)R_1+ \left(V_D+v_d \right)+\left[I_D+\left(\frac{R_L}{R_L+R_2}\right) i_d \right]R_2
@@ -1087,7 +1087,7 @@ V_B+v_s&=i_D R_1+v_D+\left(I_D+i_{R2} \right)R_2\\
 V_B&=I_D R_1 +V_D+I_D R_2\\
 v_s&=i_d R_1+v_d+i_d \left (\frac{R_L R_2}{R_L+R_2} \right )
 \end{align}
-مندرجہ بالا مساوات کا پہلا جزو یک سمتی خطِ بوجھ کی مساوات ہے جبکہ اس کا دوسرا جزو بدلتی رو خطِ بوجھ کی مساوات ہے۔شکل \حوالہ{شکل_ڈایوڈ_بدلتے_بار_کا_دور} کو شکل \حوالہ{شکل_دور_کا_یکسمتی_اور_بدلتا_حصہ} میں دوبارہ دکھایا گیا ہے جہاں اصل دور کے ساتھ ساتھ دو مزید ادوار دکھائے گئے ہیں۔شکل \حوالہ{شکل_دور_کا_یکسمتی_اور_بدلتا_حصہ} ب میں صرف  یک سمتی منبع \عددی{V_B} استعمال کرتے ہوئے اصل دور کے وہ حصے دکھائے گئے ہیں جن میں یک سمتی برقی رو \عددی{I_D} گزرتی ہے۔اس میں کرچاف کے قانون برائے برقی دباو سے مساوات \حوالہ{مساوات_ٹرانزسٹر_یکسمتی_بدلتا_بار_کے_خط} کا پہلا جزو حاصل ہوتا ہے۔اسی طرح شکل \حوالہ{شکل_دور_کا_یکسمتی_اور_بدلتا_حصہ} پ میں صرف بدلتا منبع \عددی{v_s} استعمال کرتے ہوئے اصل دور کے وہ حصے شامل کئے گئے ہیں جن میں بدلتی برقی رو \عددی{i_d} گزرتی ہے۔اس شکل میں ڈایوڈ پر برقی دباو کو \عددی{v_d} لکھتے ہوئے اس بات کی وضاحت کی گئی ہے کہ ڈایوڈ پر بدلتے برقی دباو کی بات کی جا رہی ہے۔اس دور پر کرچاف کے قانون برائے برقی دباو سے مساوات  \حوالہ{مساوات_ٹرانزسٹر_یکسمتی_بدلتا_بار_کے_خط} کا دوسرا جزو حاصل ہوتا ہے۔
+مندرجہ بالا مساوات کا پہلا جزو یک سمتی خطِ بوجھ کی مساوات ہے جبکہ اس کا دوسرا جزو بدلتی رو خطِ بوجھ کی مساوات ہے۔شکل \حوالہ{شکل_ڈایوڈ_بدلتے_بار_کا_دور} کو شکل \حوالہ{شکل_دور_کا_یکسمتی_اور_بدلتا_حصہ} میں دوبارہ دکھایا گیا ہے جہاں اصل دور کے ساتھ ساتھ دو مزید ادوار دکھائے گئے ہیں۔شکل \حوالہ{شکل_دور_کا_یکسمتی_اور_بدلتا_حصہ} ب میں صرف  یک سمتی منبع \عددی{V_B} استعمال کرتے ہوئے اصل دور کے وہ حصے دکھائے گئے ہیں جن میں یک سمتی برقی رو \عددی{I_D} گزرتی ہے۔اس میں کرخوف کے قانون برائے برقی دباو سے مساوات \حوالہ{مساوات_ٹرانزسٹر_یکسمتی_بدلتا_بار_کے_خط} کا پہلا جزو حاصل ہوتا ہے۔اسی طرح شکل \حوالہ{شکل_دور_کا_یکسمتی_اور_بدلتا_حصہ} پ میں صرف بدلتا منبع \عددی{v_s} استعمال کرتے ہوئے اصل دور کے وہ حصے شامل کئے گئے ہیں جن میں بدلتی برقی رو \عددی{i_d} گزرتی ہے۔اس شکل میں ڈایوڈ پر برقی دباو کو \عددی{v_d} لکھتے ہوئے اس بات کی وضاحت کی گئی ہے کہ ڈایوڈ پر بدلتے برقی دباو کی بات کی جا رہی ہے۔اس دور پر کرخوف کے قانون برائے برقی دباو سے مساوات  \حوالہ{مساوات_ٹرانزسٹر_یکسمتی_بدلتا_بار_کے_خط} کا دوسرا جزو حاصل ہوتا ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{ACloadLineCircuitSplitted}
@@ -1489,7 +1489,7 @@ J_\sigma = q \sigma E
 
 ڈایوڈ میں ویران خطے کے بڑھنے سے رکاوٹی برقی دباو کی قیمت میں \عددی{V_R} کا اضافہ ہوتا ہے جس سے نفوذی برقی رو \عددی{I_D} کی قیمت نہایت کم ہو جاتی ہے۔یہ اضافی رکاوٹی برقی دباو یعنی \عددی{V_R}  ڈایوڈ کے سروں پر نمودار ہو جاتا ہے  جسے وولٹ میٹر کی مدد سے ناپا جا سکتا ہے۔
 
-کرچاف کے قانون برائے برقی رو کے تحت 
+کرخوف کے قانون برائے برقی رو کے تحت 
 \begin{align}
 I=I_S-I_D
 \end{align}
@@ -1557,7 +1557,7 @@ C_j = 2 C_{j0}
 تقریباً \عددی{\SI{6}{\volt}} زینر برقی دباو کے زینر ڈایوڈ کی زینر  برقی دباو درجہ حرارت تبدیل ہونے سے تبدیل نہیں ہوتا۔اس سے زیادہ زینر برقی دباو والے زینر ڈایوڈ کی زینر برقی دباو درجہ حرارت بڑھانے سے بڑھتا ہے جبکہ اس سے کم  زینر برقی دباو والے زینر ڈایوڈ کی زینر برقی دباو درجہ حرارت بڑھانے سے گھٹتا ہے۔یوں  برقی دباو کے تبدیلی کی عمومی شرح کو  ایک فی اکائی سیلسیئس  لیتے ہوئے درجہ حرارت \عددی{\SI{1}{\celsius}} بڑھانے سے \عددی{\SI{7}{\volt}} زینر ڈایوڈ کی زینر برقی دباو \عددی{\SI{7.07}{\volt}} ہو جائے گا۔  
 
 \حصہ{سیدھا مائل ڈایوڈ}
-	سیدھے مائل چالو حال ڈایوڈ پر شکل \حوالہ{شکل_سیدھا_مائل_ڈایوڈ}  کی مدد سے غور کرتے ہیں جہاں ڈایوڈ کو بیرونی \اصطلاح {منبع برقی رو}\حاشیہب{current source}  کی مدد سے \عددی{I} فراہم کی گئی ہے۔بیرونی برقی رو \عددیء{I}، ڈایوڈ کے دونوں سروں پر اکثریتی بار فراہم کرتی ہے یعنی منفی نیم موصل کو آزاد الیکٹران اور مثبت نیم موصل کو آزاد خول۔منفی نیم موصل کو فراہم کردہ آزاد الیکٹران اس جانب ویران خطے میں مثبت ایٹموں کے ساتھ مل کر انہیں بے بار بناتے ہیں جبکہ مثبت نیم موصل خطے میں مہیا کردہ آزاد خول اس جانب ویران خطے میں منفی ایٹموں کے ساتھ مل کر انہیں بے بار بناتے ہیں۔یوں ویران خطے کی لمبائی کم ہو جاتی ہے اور یہاں کی رکاوٹی برقی دباو کی قیمت بھی کم ہو جاتی ہے۔رکاوٹی برقی دباو کی قیمت کم ہونے سے نفوذی برقی رو \عددی{I_D} میں اضافہ ہوتا ہے۔کرچاف کے مساوات برائے برقی رو کے مطابق یوں
+	سیدھے مائل چالو حال ڈایوڈ پر شکل \حوالہ{شکل_سیدھا_مائل_ڈایوڈ}  کی مدد سے غور کرتے ہیں جہاں ڈایوڈ کو بیرونی \اصطلاح {منبع برقی رو}\حاشیہب{current source}  کی مدد سے \عددی{I} فراہم کی گئی ہے۔بیرونی برقی رو \عددیء{I}، ڈایوڈ کے دونوں سروں پر اکثریتی بار فراہم کرتی ہے یعنی منفی نیم موصل کو آزاد الیکٹران اور مثبت نیم موصل کو آزاد خول۔منفی نیم موصل کو فراہم کردہ آزاد الیکٹران اس جانب ویران خطے میں مثبت ایٹموں کے ساتھ مل کر انہیں بے بار بناتے ہیں جبکہ مثبت نیم موصل خطے میں مہیا کردہ آزاد خول اس جانب ویران خطے میں منفی ایٹموں کے ساتھ مل کر انہیں بے بار بناتے ہیں۔یوں ویران خطے کی لمبائی کم ہو جاتی ہے اور یہاں کی رکاوٹی برقی دباو کی قیمت بھی کم ہو جاتی ہے۔رکاوٹی برقی دباو کی قیمت کم ہونے سے نفوذی برقی رو \عددی{I_D} میں اضافہ ہوتا ہے۔کرخوف کے مساوات برائے برقی رو کے مطابق یوں
 
 \begin{align} \label{مساوات_ڈایوڈ_رو_برابر_نفوذ_منفی_لبریزی_رو}
 I=I_D-I_S
@@ -1951,7 +1951,7 @@ I_1=I_2=\frac{V_S}{R_1+R_2}=\frac{8}{2000}=\SI{4}{\milli \ampere}
 I_1&=\frac{V_S-V_2}{R_1}=\frac{8-5.6}{1000}=\SI{2.4}{\milli \ampere}\\
 I_2&=\frac{V_2}{R_2}=\frac{5.6}{1000}=\SI{5.6}{\milli \ampere}
 \end{align*}
-حاصل ہوتے ہیں۔زینر ڈایوڈ اور دونوں مزاحمت کے مشترکہ جوڑ پر کرچاف کے قانون برائے برقی رو کے تحت \عددی{I_1=I_2+I_Z}  ہونا چاہئے جس سے
+حاصل ہوتے ہیں۔زینر ڈایوڈ اور دونوں مزاحمت کے مشترکہ جوڑ پر کرخوف کے قانون برائے برقی رو کے تحت \عددی{I_1=I_2+I_Z}  ہونا چاہئے جس سے
 \begin{align*}
 I_Z=I_1-I_2=\SI{2.4}{\milli \ampere}-\SI{5.6}{\milli \ampere}=\SI{-3.2}{\milli \ampere}
 \end{align*}
@@ -1962,7 +1962,7 @@ I_Z=I_1-I_2=\SI{2.4}{\milli \ampere}-\SI{5.6}{\milli \ampere}=\SI{-3.2}{\milli \
 I_1&=\frac{V_S-V_2}{R_1}=\frac{20-5.6}{1000}=\SI{14.4}{\milli \ampere}\\
 I_2&=\frac{V_2}{R_2}=\frac{5.6}{1000}=\SI{5.6}{\milli \ampere}
 \end{align*}
-حاصل ہوتے ہیں۔کرچاف کے قانون برائے برقی رو سے
+حاصل ہوتے ہیں۔کرخوف کے قانون برائے برقی رو سے
 \begin{align*}
 I_1&=I_2+I_Z\\
 \SI{14.4}{\milli \ampere}&=\SI{5.6}{\milli \ampere}+I_Z\\
