--- a/tex/electronicsFeedback.tex
+++ b/tex/electronicsFeedback.tex
@@ -36,7 +36,7 @@
 \caption{برقی دباو ایمپلیفائر کا مساوی تھوِنن  دور}
 \label{شکل_واپسی_دباو_ایمپلیفائر_تھیونن_مساوی}
 \end{figure}
-داخلی جانب برقی رو کو \عددیء{I_i}  لکھتے ہوئے کرچاف کا قانون برائے برقی دباو استعمال کرتے ہیں۔
+داخلی جانب برقی رو کو \عددیء{I_i}  لکھتے ہوئے کرخوف کا قانون برائے برقی دباو استعمال کرتے ہیں۔
 \begin{align*}
 V_s=I_i R_s+I_i R_i \\
 I_i = \frac{V_s}{R_s +R_i}
@@ -272,7 +272,7 @@ A_G=\frac{I_o}{V_s}=\frac{I_o}{V_o} \times \frac{V_o}{V_s}=\frac{1}{R_L} \times 
 %+++++++++
 
 \حصہ{بنیادی کارکردگی}
-ٹرانزسٹر ایمپلیفائر کے دور میں ٹرانزسٹر کا ریاضی نمونہنسب کرتے ہوئے انہیں کرچاف کے قوانین سے حل کرنے سے آپ بخوبی واقف ہیں۔واپسی ایمپلیفائر کو بھی اسی طرح حل کرنا ممکن ہے البتہ انہیں یوں حل کرنے سے واپسی عمل کی وضاحت نہیں ہوتی۔اس حصے میں ہم واپسی ایمپلیفائر کو اس طرح حل کریں گے کہ ان میں واپسی اشارے کا کردار اجاگر ہو۔
+ٹرانزسٹر ایمپلیفائر کے دور میں ٹرانزسٹر کا ریاضی نمونہنسب کرتے ہوئے انہیں کرخوف کے قوانین سے حل کرنے سے آپ بخوبی واقف ہیں۔واپسی ایمپلیفائر کو بھی اسی طرح حل کرنا ممکن ہے البتہ انہیں یوں حل کرنے سے واپسی عمل کی وضاحت نہیں ہوتی۔اس حصے میں ہم واپسی ایمپلیفائر کو اس طرح حل کریں گے کہ ان میں واپسی اشارے کا کردار اجاگر ہو۔
 
 واپسی ادوار کے تین جزو ہیں۔پہلا جزو بنیادی ایمپلیفائر، دوسرا جزو جمع کار (یا منفی کار) اور تیسرا جزو واپس کار۔شکل \حوالہ{شکل_بنیادی_واپسی_ایمپلیفائر} میں ان تینوں اجزاء کو دکھایا گیا ہے۔
 
@@ -936,7 +936,7 @@ R_{of}'=\frac{R_o'}{1+W A_R}
 
 
 \جزوحصہ{واپسی برقی دباو ایمپلیفائر}
-مثبت حسابی ایمپلیفائر کو شکل \حوالہ{شکل_واپسی_مثبت_واپسی_ایمپلیفائر} الف میں دکھایا گیا ہے۔شکل  ب میں اسی کو قدر مختلف طرز پر دوبارہ بنایا گیا ہے جہاں اس میں واپسی اشارے کی پہچان آسانی سے ممکن ہے۔شکل  ب میں داخلی جانب کرچاف کے قانون برائے برقی دباو سے
+مثبت حسابی ایمپلیفائر کو شکل \حوالہ{شکل_واپسی_مثبت_واپسی_ایمپلیفائر} الف میں دکھایا گیا ہے۔شکل  ب میں اسی کو قدر مختلف طرز پر دوبارہ بنایا گیا ہے جہاں اس میں واپسی اشارے کی پہچان آسانی سے ممکن ہے۔شکل  ب میں داخلی جانب کرخوف کے قانون برائے برقی دباو سے
 \begin{align} \label{مساوات_واپسی_واپسی_برقی_دباو_ایمپلیفائر_کی_جماعت_بندی}
 V_i=V_s-V_f
 \end{align}
@@ -972,7 +972,7 @@ A_{vf} \approx \frac{1}{W}=1+\frac{R_2}{R_1}
 \begin{align} \label{مساوات_واپسی_داخلی_نارٹن_اشارہ}
 I_s=\frac{V_s}{R_1}
 \end{align}
-ہو گا۔شکل  پ کے داخلی جانب کرچاف کے قانون برائے برقی رو کی مدد سے مساوات \حوالہ{مساوات_واپسی_فرق_اشارہ} کے طرز پر
+ہو گا۔شکل  پ کے داخلی جانب کرخوف کے قانون برائے برقی رو کی مدد سے مساوات \حوالہ{مساوات_واپسی_فرق_اشارہ} کے طرز پر
 \begin{align} \label{مساوات_واپسی_واپسی_مزاحمت_نما_ایمپلیفائر_کی_جماعت_بندی}
 I_i=I_s-I_f
 \end{align}
@@ -1050,7 +1050,7 @@ A_{vf}=\frac{V_o}{V_s}=\frac{I_o R_L}{V_s}=\left(\frac{I_o}{V_s} \right ) R_L=A_
 
 
 \جزوحصہ{واپسی برقی رو ایمپلیفائر}
-شکل \حوالہ{شکل_واپسی_ٹرانزسٹر_برقی_رو_ایمپلیفائر} الف میں ٹرانزسٹر کا دور دکھایا گیا ہے جس میں بوجھ \عددیء{R_L} ٹرانزسٹر \عددیء{Q_2} کے  کلکٹر  پر لگایا گیا ہے۔شکل  ب میں باریک اشاراتی تجزئے کی غرض سے کپیسٹر کو قصر دور اور \عددیء{V_{CC}=V_{BB}=0} لیا گیا ہے۔مزید داخلی اشارے کا نارٹن مساوی دور استعمال کیا گیا ہے اور \عددیء{R_s} کو ایمپلیفائر کا حصہ تصور کیا گیا ہے۔یوں کرچاف کے قانون برائے برقی رو کی مدد سے ہم لکھ سکتے ہیں۔
+شکل \حوالہ{شکل_واپسی_ٹرانزسٹر_برقی_رو_ایمپلیفائر} الف میں ٹرانزسٹر کا دور دکھایا گیا ہے جس میں بوجھ \عددیء{R_L} ٹرانزسٹر \عددیء{Q_2} کے  کلکٹر  پر لگایا گیا ہے۔شکل  ب میں باریک اشاراتی تجزئے کی غرض سے کپیسٹر کو قصر دور اور \عددیء{V_{CC}=V_{BB}=0} لیا گیا ہے۔مزید داخلی اشارے کا نارٹن مساوی دور استعمال کیا گیا ہے اور \عددیء{R_s} کو ایمپلیفائر کا حصہ تصور کیا گیا ہے۔یوں کرخوف کے قانون برائے برقی رو کی مدد سے ہم لکھ سکتے ہیں۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{npnCurrentShuntFeedback}
@@ -1194,7 +1194,7 @@ A_{gf}=\frac{I_o}{V_s}=\frac{\frac{V_o}{R_L}}{I_s R_s}=\left (\frac{V_o}{I_s} \r
 \item
 واپسی اشارے \عددیء{X_f=W X_o} کی مساوات حاصل کریں جس سے \عددیء{W} کی قیمت حاصل ہو گی۔
 \item
-کرچاف کے قوانین استعمال کرتے ہوئے بنیادی ایمپلیفائر سے افزائش \عددیء{A}، داخلی مزاحمت \عددیء{R_i} اور خارجی مزاحمت \عددیء{R_o} حاصل کریں۔
+کرخوف کے قوانین استعمال کرتے ہوئے بنیادی ایمپلیفائر سے افزائش \عددیء{A}، داخلی مزاحمت \عددیء{R_i} اور خارجی مزاحمت \عددیء{R_o} حاصل کریں۔
 \item
 مندرجہ بالا حاصل کردہ معلومات سے \عددیء{A_f}، \عددیء{R_{if}'} اور \عددیء{R_{of}} حاصل کریں۔
 \end{itemize}
