--- a/tex/electronicsFilters.tex
+++ b/tex/electronicsFilters.tex
@@ -223,11 +223,11 @@ A_0&=1+\frac{R_2}{R_1}
 \end{figure}
 %
 
-آئیں شکل \حوالہ{شکل_تعددی_ردعمل_بٹر_ورت_فلٹر_دور} ب میں دئے دوسرے درجے کے بٹر ورت فلٹر کو حل کریں۔جوڑ \عددیء{v_1} پر کرچاف کے قانون برائے برقی رو کی مدد سے
+آئیں شکل \حوالہ{شکل_تعددی_ردعمل_بٹر_ورت_فلٹر_دور} ب میں دئے دوسرے درجے کے بٹر ورت فلٹر کو حل کریں۔جوڑ \عددیء{v_1} پر کرخوف کے قانون برائے برقی رو کی مدد سے
 \begin{align*}
 \frac{v_1-v_i}{Z_1}+\frac{v_1}{Z_3+Z_4}+\frac{v_1-v_o}{Z_2}=0
 \end{align*}
-لکھا جا سکتا ہے جبکہ کرچاف کے قانون برائے برقی دباو کی مدد سے 
+لکھا جا سکتا ہے جبکہ کرخوف کے قانون برائے برقی دباو کی مدد سے 
 \begin{align*}
 v_k= \left(\frac{Z_4}{Z_3+Z_4} \right) v_1
 \end{align*}
