--- a/tex/electronicsFrequencyResponse.tex
+++ b/tex/electronicsFrequencyResponse.tex
@@ -1094,7 +1094,7 @@ A_v&= - g_m \left(\frac{R_b \mathbin{\|} r_{be}}{r_i+R_b \mathbin{\|} r_{be}} \r
 \label{شکل_تعددی_ردعمل_سوال_زمین_تک_کپیسٹر_مساوی_دور}
 \end{figure}
 
-حل:شکل \حوالہ{شکل_تعددی_ردعمل_سوال_زمین_تک_کپیسٹر_مساوی_دور} میں \عددی{R_b} کو نظر انداز اور \عددی{R_c \mathbin{\|} R_L} کو \عددی{R_L'} لکھتے ہوئے مساوی دور دکھایا گیا ہے۔جیسے ہی داخلی اشارہ  \عددی{\SI{20}{\milli \volt}} ہوتا ہے اسی دم \عددی{v_{be}=\SI{10}{\milli \volt}} ہو جائے گا اور یوں \عددی{i_c=\SI{0.4}{\milli \ampere}} ہو جائیں گے۔کرچاف کے قانون برائے برقی رو کے تحت خارجی جانب
+حل:شکل \حوالہ{شکل_تعددی_ردعمل_سوال_زمین_تک_کپیسٹر_مساوی_دور} میں \عددی{R_b} کو نظر انداز اور \عددی{R_c \mathbin{\|} R_L} کو \عددی{R_L'} لکھتے ہوئے مساوی دور دکھایا گیا ہے۔جیسے ہی داخلی اشارہ  \عددی{\SI{20}{\milli \volt}} ہوتا ہے اسی دم \عددی{v_{be}=\SI{10}{\milli \volt}} ہو جائے گا اور یوں \عددی{i_c=\SI{0.4}{\milli \ampere}} ہو جائیں گے۔کرخوف کے قانون برائے برقی رو کے تحت خارجی جانب
 \begin{align*}
 C_L \frac{d v_L}{d t}+\frac{v_L}{R_L'} +g_m v_{be}=0\\
 C_L \frac{d v_L}{d t}+\frac{v_L}{R_L'} +0.0004=0
@@ -1471,7 +1471,7 @@ C_M' \approx C_{b'c}
 \label{شکل_تعددی_ردعمل_بلند_تعددی_سادہ_دور_الف}
 \end{figure}
 
-آئیں شکل \حوالہ{شکل_تعددی_ردعمل_بلند_تعددی_سادہ_دور_الف} کو \اصطلاح{کرچاف کے قوانین} استعمال کرتے ہوئے حل کرتے ہیں۔شکل میں \عددیء{r_{b'e}}، \عددی{C_{b'e}} اور \عددی{C_M} متوازی جڑے ہیں۔ان کی کل برقی رکاوٹ کو \عددی{Z} سے ظاہر کرتے ہیں۔یوں
+آئیں شکل \حوالہ{شکل_تعددی_ردعمل_بلند_تعددی_سادہ_دور_الف} کو \اصطلاح{کرخوف کے قوانین} استعمال کرتے ہوئے حل کرتے ہیں۔شکل میں \عددیء{r_{b'e}}، \عددی{C_{b'e}} اور \عددی{C_M} متوازی جڑے ہیں۔ان کی کل برقی رکاوٹ کو \عددی{Z} سے ظاہر کرتے ہیں۔یوں
 \begin{align*}
 \frac{1}{Z}&=s\left(C_{b'e}+C_M \right)+\frac{1}{r_{b'e}}
 \end{align*}
@@ -1565,7 +1565,7 @@ C_{b'c}=\SI{2}{\pico \farad} \hspace{1cm} C_{b'e}=\SI{220}{\pico \farad} \hspace
 \end{align*}
 لیتے ہوئے \عددیء{I_{CQ}\approx \SI{12.5}{\milli \ampere}}، \عددی{g_m =\SI{0.5}{\siemens}} اور \عددی{r_{b'e}=\SI{150}{\ohm}} حاصل ہوتے ہیں۔اس ایمپلیفائر کی درمیانی تعدد پر افزائش \عددی{A_v} اور بلند انقطاعی تعدد \عددی{f_H} حاصل کریں۔
 
-حل:حصہ \حوالہ{حصہ_تعددی_ردعمل_برقی_بار_موجود_مشترک_مخارج} میں اسی کو کرچاف کے قوانین کی مدد سے حل کیا گیا۔اس مثال کو مسئلہ نارٹن اور مسئلہ تھونن کے بار بار استعمال سے حل کرتے ہیں۔
+حل:حصہ \حوالہ{حصہ_تعددی_ردعمل_برقی_بار_موجود_مشترک_مخارج} میں اسی کو کرخوف کے قوانین کی مدد سے حل کیا گیا۔اس مثال کو مسئلہ نارٹن اور مسئلہ تھونن کے بار بار استعمال سے حل کرتے ہیں۔
 
 \عددی{R_C \mathbin{\|} R_L'} کو \عددی{R_L} لکھتے ہوئے
 \begin{align*}
@@ -1671,7 +1671,7 @@ Z_L&=\frac{R_L}{j \omega C_M' R_L+1}
 \begin{align}
 A_v&=\left(\frac{v_o}{v_{th}} \right) \left( \frac{v_{th}}{v_i}\right)=-\left(\frac{g_m R_L}{j \frac{\omega}{\omega_H} +1} \right) \left(\frac{R_G}{R_G+R_i} \right)
 \end{align}
-اس مساوات کے مطابق بلند انقطاعی تعدد کا دارومدار \عددی{R_{th}} پر ہے۔آئیں دیکھیں کہ ماسفیٹ کی بلند ترین انقطاعی تعدد کس صورت حاصل ہو گی۔ایسا کرنے کی خاطر شکل \حوالہ{شکل_تعددی_ردعمل_ماسفیٹ_مشترکہ_مخارج} میں \عددی{R_i=\SI{0}{\ohm}} لیتے  ہوئے اس کا مساوی دور حاصل کرتے ہیں جسے شکل \حوالہ{شکل_تعددی_ردعمل_ماسفیٹ_بلند_ترین_انقطاعی} میں دکھایا گیا ہے جہاں \عددی{r_o} کو بھی شامل کیا گیا ہے۔اس شکل میں چونکہ \عددیء{R_1}، \عددی{R_2} اور \عددی{C_{gs}} تینوں داخلی اشارہ \عددی{v_i} کے متوازی جڑے ہیں لہٰذا گیٹ پر \عددی{v_i} ہی پایا جائے۔یوں \عددی{v_{gs}=v_i} کے برابر ہو گا۔ \عددی{v_o} جوڑ پر کرچاف کے قانون برائے برقی رو کے مدد سے ہم لکھ سکتے ہیں
+اس مساوات کے مطابق بلند انقطاعی تعدد کا دارومدار \عددی{R_{th}} پر ہے۔آئیں دیکھیں کہ ماسفیٹ کی بلند ترین انقطاعی تعدد کس صورت حاصل ہو گی۔ایسا کرنے کی خاطر شکل \حوالہ{شکل_تعددی_ردعمل_ماسفیٹ_مشترکہ_مخارج} میں \عددی{R_i=\SI{0}{\ohm}} لیتے  ہوئے اس کا مساوی دور حاصل کرتے ہیں جسے شکل \حوالہ{شکل_تعددی_ردعمل_ماسفیٹ_بلند_ترین_انقطاعی} میں دکھایا گیا ہے جہاں \عددی{r_o} کو بھی شامل کیا گیا ہے۔اس شکل میں چونکہ \عددیء{R_1}، \عددی{R_2} اور \عددی{C_{gs}} تینوں داخلی اشارہ \عددی{v_i} کے متوازی جڑے ہیں لہٰذا گیٹ پر \عددی{v_i} ہی پایا جائے۔یوں \عددی{v_{gs}=v_i} کے برابر ہو گا۔ \عددی{v_o} جوڑ پر کرخوف کے قانون برائے برقی رو کے مدد سے ہم لکھ سکتے ہیں
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{highFreqResponseMosfetAmplifierB}
@@ -1738,7 +1738,7 @@ R_{th}&=r_i \mathbin{\|} R_1 \mathbin{\|} R_2 +r_{bb'}=r_s
 \caption{کلکٹر  مشترک بلند تعددی سادہ مساوی دور}
 \label{شکل_تعددی_ردعمل_محاصل_مشترک_سادہ_مساوی}
 \end{figure}
-اس شکل کو دیکھتے ہوئے کرچاف کے قانون برائے برقی رو کے استعمال سے ایمٹر        پر ہم لکھ سکتے ہیں
+اس شکل کو دیکھتے ہوئے کرخوف کے قانون برائے برقی رو کے استعمال سے ایمٹر        پر ہم لکھ سکتے ہیں
 \begin{align*}
 \left(v_e-v_1 \right)s C_{b'e} +\frac{v_e-v_1}{r_{b'e}} +\frac{v_e}{R_e}=\beta i_b=\beta \frac{v_1 -v_e}{r_{b'e}}
 \end{align*}
@@ -1751,7 +1751,7 @@ v_1&=\left[\frac{sC_{b'e}+\frac{\beta+1}{r_{b'e}}+\frac{1}{R_e}}{sC_{b'e}+\frac{
 &=\left[1+\frac{1}{R_e \left(sC_{b'e}+\frac{\beta+1}{r_{b'e}}\right)}\right] v_e
 \end{aligned}
 \end{gather}
-اسی طرح جوڑ \عددی{v_1} پر کرچاف کے قانون برائے برقی رو کے استعمال سے ہم لکھ سکتے ہیں
+اسی طرح جوڑ \عددی{v_1} پر کرخوف کے قانون برائے برقی رو کے استعمال سے ہم لکھ سکتے ہیں
 \begin{align*}
 \frac{v_1-v_s}{r_s}+v_1 sC_{b'c} +\left(v_1-v_e\right) sC_{b'e}+\frac{v_1-v_e}{r_{b'e}}=0
 \end{align*}
@@ -2473,11 +2473,11 @@ A_0&=1+\frac{R_2}{R_1}
 \end{figure}
 %
 
-آئیں شکل \حوالہ{شکل_تعددی_ردعمل_بٹر_ورت_فلٹر_دور} ب میں دئے دوسرے درجے کے بٹر ورت فلٹر کو حل کریں۔جوڑ \عددیء{v_1} پر کرچاف کے قانون برائے برقی رو کی مدد سے
+آئیں شکل \حوالہ{شکل_تعددی_ردعمل_بٹر_ورت_فلٹر_دور} ب میں دئے دوسرے درجے کے بٹر ورت فلٹر کو حل کریں۔جوڑ \عددیء{v_1} پر کرخوف کے قانون برائے برقی رو کی مدد سے
 \begin{align*}
 \frac{v_1-v_i}{Z_1}+\frac{v_1}{Z_3+Z_4}+\frac{v_1-v_o}{Z_2}=0
 \end{align*}
-لکھا جا سکتا ہے جبکہ کرچاف کے قانون برائے برقی دباو کی مدد سے 
+لکھا جا سکتا ہے جبکہ کرخوف کے قانون برائے برقی دباو کی مدد سے 
 \begin{align*}
 v_k= \left(\frac{Z_4}{Z_3+Z_4} \right) v_1
 \end{align*}
