--- a/tex/electronicsMOSFET.tex
+++ b/tex/electronicsMOSFET.tex
@@ -648,7 +648,7 @@ i_{DS}&=k_n \left[\left(v_{GS}-V_t \right )v_{DS}-\frac{v_{DS}^{2}}{2} \right ]\
 \begin{align*}
 I_{DS}=\frac{k_n}{2} \left(V_{GS}-V_t \right )^{2}=\frac{0.2 \times 10^{-3}}{2} \left(0-(-3) \right )^2 =\SI{0.9}{\milli \ampere}
 \end{align*}
-اور شکل  ب میں خارجی جانب کرچاف کا قانون برائے برقی دباو استعمال کرتے ہوئے
+اور شکل  ب میں خارجی جانب کرخوف کا قانون برائے برقی دباو استعمال کرتے ہوئے
 \begin{align*}
 V_{DD}&=I_{DS} R_D+V_{DS}\\
 10&=0.9 \times 10^{-3} \times 4.7 \times 10^{3}+V_{DS}\\
@@ -662,7 +662,7 @@ V_{GS}-V_{DS}=0-5.77=\SI{-5.77}{\volt}
 \end{align*}
 ہے جبکہ  \عددی{V_t=\SI{-3}{\volt}} ہے۔یوں  \عددی{V_{GS}-V_{DS}< V_t} کی شرط پوری ہوتی ہے اور ماسفیٹ یقیناً افزائندہ ہی ہے لہٰذا \عددی{I_{DS}=\SI{0.9}{\milli \ampere}} ہی صحیح جواب ہے۔
 
-آئیں اسی مثال میں ماسفیٹ کو غیر افزائندہ تصور کر کے مثال کو دوبارہ حل کرتے ہیں۔غیر افزائندہ ماسفیٹ کی مساوات حل کرنے کی خاطر  \عددی{V_{DS}} کا معلوم ہونا ضروری ہے۔دور کے خارجی جانب کرچاف کے قانون برائے برقی دباو سے ملتا ہے
+آئیں اسی مثال میں ماسفیٹ کو غیر افزائندہ تصور کر کے مثال کو دوبارہ حل کرتے ہیں۔غیر افزائندہ ماسفیٹ کی مساوات حل کرنے کی خاطر  \عددی{V_{DS}} کا معلوم ہونا ضروری ہے۔دور کے خارجی جانب کرخوف کے قانون برائے برقی دباو سے ملتا ہے
 \begin{align*}
 V_{DD}&=I_{DS} R_D+V_{DS}\\
 10&=I_{DS} \times 4.7 \times 10^{3}+V_{DS}\\
@@ -692,7 +692,7 @@ V_{GS}=V_{DS}
 \begin{align*}
 I_{DS}=\frac{k_n}{2}\left(V_{GS}-V_t \right )^{2}
 \end{align*}
-سے حاصل کر سکتے ہیں۔البتہ ایسا کرنے کی خاطر ہمیں \عددی{V_{GS}} کی قیمت درکار ہو گی۔شکل  پ کے خارجی جانب کرچاف کے قانون برائے برقی دباو کے استعمال سے 
+سے حاصل کر سکتے ہیں۔البتہ ایسا کرنے کی خاطر ہمیں \عددی{V_{GS}} کی قیمت درکار ہو گی۔شکل  پ کے خارجی جانب کرخوف کے قانون برائے برقی دباو کے استعمال سے 
 \begin{align*}
 V_{DD}=I_{DS} R_D+V_{DS}
 \end{align*}
@@ -723,7 +723,7 @@ V_{DS}&=V_{GS}=10-0.8639 \times 10^{-3} \times 4700=\SI{5.94}{\volt}
 \ابتدا{مثال} \شناخت{مثال_میدانی_برقی_رو_الف}
 شکل \حوالہ{شکل_ماسفیٹ_کے_یک_سمتی_ادوار_الف} ت میں منفی گھٹاتا ماسفیٹ کا گیٹ اور ڈرین جوڑ کر دور بنایا گیا ہے۔اس ماسفیٹ کا \عددی{V_t=\SI{-3}{\volt}} اور \عددی{k_n=\SI{0.2}{\milli \ampere \volt^{-2}}} ہیں  جبکہ دور میں \عددی{{V_{DD}=\SI{10}{\volt}}} ہے۔دور میں برقی رو حاصل کریں۔
 
-حل:	اس مثال میں خارجی جانب کرچاف کے قانون برائے برقی دباو کے تحت
+حل:	اس مثال میں خارجی جانب کرخوف کے قانون برائے برقی دباو کے تحت
 \begin{align*}
 V_{DD}&=I_{DS}R_D+V_{DS}\\
 10&=I_{DS}\times 4700+V_{DS}
@@ -787,7 +787,7 @@ I_{DS}&=\frac{k_n}{2}\left(V_{GS}-V_t \right )^2 \\
 V_{GS}&=\mp \sqrt{8} +3\\
 V_{GS}&=\SI{0.172}{\volt}, \SI{5.828}{\volt}
 \end{align*}
-\عددی{V_{GS}=\SI{0.172}{\volt}} کے جواب کو رد کرتے ہیں چونکہ اس طرح  \عددی{V_{GS}< V_t} ہو گا اور ماسفیٹ منقطع ہو گا۔ \عددی{{V_{GS}=\SI{5.828}{\volt}}} کو تسلیم کرتے ہوئے دور کے خارجی جانب کرچاف کے قانون برائے برقی دباو میں \عددی{V_{DS}} کی قیمت کو حاصل شدہ  \عددی{V_{GS}} کی قیمت کے برابر لیتے ہوئے
+\عددی{V_{GS}=\SI{0.172}{\volt}} کے جواب کو رد کرتے ہیں چونکہ اس طرح  \عددی{V_{GS}< V_t} ہو گا اور ماسفیٹ منقطع ہو گا۔ \عددی{{V_{GS}=\SI{5.828}{\volt}}} کو تسلیم کرتے ہوئے دور کے خارجی جانب کرخوف کے قانون برائے برقی دباو میں \عددی{V_{DS}} کی قیمت کو حاصل شدہ  \عددی{V_{GS}} کی قیمت کے برابر لیتے ہوئے
 \begin{align*}
 V_{DD}&=I_{DS}R_{D} +V_{DS}\\
 10&=0.6 \times 10^{-3} \times R_{D}+5.828\\
@@ -807,7 +807,7 @@ R_{D}&=\SI{6.95}{\kilo \ohm}
 \label{شکل_ماسفیٹ_کے_یک_سمتی_ادوار_مثالیں}
 \end{figure}
 
-حل:	دور کے داخلی جانب کرچاف کے قانون برائے برقی دباو کے تحت
+حل:	دور کے داخلی جانب کرخوف کے قانون برائے برقی دباو کے تحت
 \begin{align*}
 & V_{GS}+I_{DS}R_S-5=0\\
 & V_{GS}=5-I_{DS}R_S
@@ -854,7 +854,7 @@ I_{DS}&=\frac{k_n}{2} \left(V_{GS}-V_t \right )^{2}\\
 V_{GS}&=3.3 \mp \sqrt{\frac{4}{0.6}}\\
 V_{GS}&=\SI{0.718}{\volt}, \hspace{2mm} \SI{5.88}{\volt}
 \end{align*}
-اگر \عددی{V_{GS}=\SI{0.718}{\volt}}  لیا جائے تب  \عددی{V_{GS}<V_t} ہو گا اور ماسفیٹ منقطع ہو گا لہٰذا اس جواب کو رد کیا جاتا ہے۔یوں \عددی{V_{GS}=\SI{5.88}{\volt}} صحیح جواب ہے۔دور کے خارجی جانب کرچاف کے قانون برائے برقی دباو کے تحت
+اگر \عددی{V_{GS}=\SI{0.718}{\volt}}  لیا جائے تب  \عددی{V_{GS}<V_t} ہو گا اور ماسفیٹ منقطع ہو گا لہٰذا اس جواب کو رد کیا جاتا ہے۔یوں \عددی{V_{GS}=\SI{5.88}{\volt}} صحیح جواب ہے۔دور کے خارجی جانب کرخوف کے قانون برائے برقی دباو کے تحت
 \begin{align*}
 V_{GS}&=V_G  - V_S\\
 5.88&=0-V_S\\
@@ -1106,7 +1106,7 @@ V_{GD}=V_G-V_D=0-4.328=\SI{-4.328}{\volt}
 
 ماسفیٹ کا گیٹ اور ڈرین جڑے ہونے کی وجہ سے ان دونوں پر برابر برقی دباو پایا جائے گا یعنی \عددی{V_{G1}=V_{D1}} ہو گا۔یوں \عددی{V_{GS1}=V_{DS1}} اور  \عددی{V_{GS1}-V_{DS1}<V_t} ہو گا۔یہ افزائندہ ماسفیٹ کی نشانی ہے۔
 
-کرچاف کے قانون برائے برقی دباو کے تحت
+کرخوف کے قانون برائے برقی دباو کے تحت
 \begin{align*}
 V_{DD}=I_{DS1}R_1+V_{DS1}\\
 V_{DS1}=V_{DD}-I_{DS1}R_1
@@ -1154,7 +1154,7 @@ I_{DS2}=\frac{k_n}{2} \left(V_{GS2}-V_t \right )^2
 \begin{align} \label{مساوات_میدانی_یکسمتی_رو}
 I_{DS}=\frac{k_n}{2} \left(V_{GS}-V_t \right )^2
 \end{align}
-حاصل ہوتا ہے۔خارجی جانب کرچاف کے قانون برائے برقی دباو سے
+حاصل ہوتا ہے۔خارجی جانب کرخوف کے قانون برائے برقی دباو سے
 \begin{align} \label{مساوات_میدانی_یکسمتی_خارجی_دباو}
 V_{DS}=V_{DD}-I_{DS}R_D
 \end{align}
@@ -1388,7 +1388,7 @@ i_d&=i_s=i_{ds}=g_m v_{gs}
 \begin{align*}
 \frac{\textrm{دباو برقی}}{\textrm{رو برقی}}=\frac{v_{gs}}{\frac{1}{g_m}}=g_m v_{gs}
 \end{align*} 
-ہو گی۔یہی برقی رو سورس پر ہو گی۔گیٹ \عددیء{G} کے جوڑ پر \عددیء{D} کی جانب سے \عددیء{g_m v_{gs}} برقی رو آتی ہے۔اس جوڑ سے اتنی ہی برقی رو مزاحمت سے گزرتے ہوئے \عددیء{S} رواں ہے۔یوں کرچاف کے قانون برائے برقی رو کی مدد سے گیٹ  پر برقی رو \عددیء{i_g=0} حاصل ہوتی ہے۔داخلی مزاحمت \عددیء{\tfrac{v_{gs}}{i_g}} کی قیمت \عددیء{i_g=0} کی بنا پر لامحدود حاصل ہوتی ہے۔ہم دیکھتے ہیں کہ ٹی ریاضی نمونے سے بھی بالکل وہی جوابات حاصل ہوتے ہیں جو پائے ریاضی نمونے سے حاصل ہوتے ہیں لہٰذا ماسفیٹ کے ادوار حل کرتے وقت ٹی ریاضی نمونے کو بھی استعمال کیا جا سکتا ہے۔ٹی ریاضی نمونے میں \عددیء{r_o} کی شمولیت شکل \حوالہ{شکل_ماسفیٹ_ٹی_ماڈل} ب میں دکھایا گیا ہے۔ 
+ہو گی۔یہی برقی رو سورس پر ہو گی۔گیٹ \عددیء{G} کے جوڑ پر \عددیء{D} کی جانب سے \عددیء{g_m v_{gs}} برقی رو آتی ہے۔اس جوڑ سے اتنی ہی برقی رو مزاحمت سے گزرتے ہوئے \عددیء{S} رواں ہے۔یوں کرخوف کے قانون برائے برقی رو کی مدد سے گیٹ  پر برقی رو \عددیء{i_g=0} حاصل ہوتی ہے۔داخلی مزاحمت \عددیء{\tfrac{v_{gs}}{i_g}} کی قیمت \عددیء{i_g=0} کی بنا پر لامحدود حاصل ہوتی ہے۔ہم دیکھتے ہیں کہ ٹی ریاضی نمونے سے بھی بالکل وہی جوابات حاصل ہوتے ہیں جو پائے ریاضی نمونے سے حاصل ہوتے ہیں لہٰذا ماسفیٹ کے ادوار حل کرتے وقت ٹی ریاضی نمونے کو بھی استعمال کیا جا سکتا ہے۔ٹی ریاضی نمونے میں \عددیء{r_o} کی شمولیت شکل \حوالہ{شکل_ماسفیٹ_ٹی_ماڈل} ب میں دکھایا گیا ہے۔ 
 
 %
 \begin{figure}
@@ -1611,7 +1611,7 @@ A_v=\SI{-8.64}{\volt \per \volt}
 \label{شکل_ماسفیٹ_افزائش_بطور_کسر_مزاحمت_الف}
 \end{figure}
 
-حل:شکل  ب میں ٹی ریاضی نمونے استعمال کرتے ہوئے اس کا باریک اشاراتی مساوی دور دکھایا گیا ہے۔ٹی ریاضی نمونے استعمال کرتے وقت اس حقیقت کو بروئے کار لائیں کہ گیٹ پر برقی رو صفر رہتی ہے۔شکل میں \عددیء{i_g=0} لکھ کر اس حقیقت کی یاد دہانی کرائی گئی ہے۔داخلی جانب کرچاف کے قانون برائے برقی دباو کی مدد سے ہم لکھ سکتے ہیں۔
+حل:شکل  ب میں ٹی ریاضی نمونے استعمال کرتے ہوئے اس کا باریک اشاراتی مساوی دور دکھایا گیا ہے۔ٹی ریاضی نمونے استعمال کرتے وقت اس حقیقت کو بروئے کار لائیں کہ گیٹ پر برقی رو صفر رہتی ہے۔شکل میں \عددیء{i_g=0} لکھ کر اس حقیقت کی یاد دہانی کرائی گئی ہے۔داخلی جانب کرخوف کے قانون برائے برقی دباو کی مدد سے ہم لکھ سکتے ہیں۔
 \begin{align*}
 i_s=\frac{v_i}{\frac{1}{g_m}+R_S}
 \end{align*}
@@ -2370,7 +2370,7 @@ R_i=\frac{r_o+R_d}{\mu+1}
 \label{شکل_ماسفیٹ_دو_کڑی_زنجیری_الف}
 \end{figure}
 
-حل:\عددی{Q_2} کے خارجی جانب کرچاف کے قانون برائے برقی دباو سے
+حل:\عددی{Q_2} کے خارجی جانب کرخوف کے قانون برائے برقی دباو سے
 \begin{align*}
 9+5 &=V_{DS2}+I_{DS2}R_{S2}\\
 &=5+1.2 \times 10^{-3} R_{S2}
