--- a/tex/electronicsOPAMP.tex
+++ b/tex/electronicsOPAMP.tex
@@ -255,7 +255,7 @@ R_o &=0
 شکل \حوالہ{شکل_حسابی_ماڈل_استعمال} الف میں حسابی ایمپلیفائر کا غیر کامل مساوی دور جبکہ شکل  الف     میں اس کا کامل مساوی دور استعمال کرتے ہوئے شکل \حوالہ{شکل_منفی_ایمپلیفائر} کو بنایا گیا ہے۔
 \begin{itemize}
 \item
-شکل-الف میں کرچاف کے قانون برائے برقی رو استعمال کرتے ہوئے
+شکل-الف میں کرخوف کے قانون برائے برقی رو استعمال کرتے ہوئے
 \begin{align*}
 \frac{v_1-v_s}{R_1}+\frac{v_1}{R_i}+\frac{v_1-v_o}{R_2}=0\\
 \frac{v_o-v_1}{R_2}+\frac{v_o-A_d v_d}{R_o}=0
@@ -276,7 +276,7 @@ v_o=\SI{-10.00111}{\volt}
 \end{align*}
 حاصل ہوتا ہے۔
 \item
-شکل \حوالہ{شکل_حسابی_ماڈل_استعمال} ب پر کرچاف کے قانون برائے برقی رو کے استعمال کرتے ہوئے حل کرتے ہیں۔
+شکل \حوالہ{شکل_حسابی_ماڈل_استعمال} ب پر کرخوف کے قانون برائے برقی رو کے استعمال کرتے ہوئے حل کرتے ہیں۔
 \begin{align*}
 \frac{v_1-v_s}{R_1}+\frac{v_1-A_d v_d}{R_2}=0\\
 \frac{-v_d-v_s}{R_1}+\frac{-v_d-A_d v_d}{R_2}=0\\
@@ -324,7 +324,7 @@ A_d & \to \infty
 شکل \حوالہ{شکل_منفی_ایمپلیفائر} میں حسابی ایمپلیفائر کا کامل مساوی دور (ریاضی نمونہ) استعمال کرتے ہوئے داخلی مزاحمت کی مساوات حاصل کریں۔
 
 حل:
- شکل \حوالہ{شکل_حسابی_ماڈل_استعمال} ب  میں کامل دور استعمال کرتے ہوئے اسی کو دوبارہ دکھایا گیا ہے۔منفی داخلی سرے  پر کرچاف کے قانون برائے برقی رو استعمال کرتے ہوئے اس میں \عددی{v_o=A_d v_d} یعنی \عددی{v_o=-A_d v_1} ڈالتے ہیں۔
+ شکل \حوالہ{شکل_حسابی_ماڈل_استعمال} ب  میں کامل دور استعمال کرتے ہوئے اسی کو دوبارہ دکھایا گیا ہے۔منفی داخلی سرے  پر کرخوف کے قانون برائے برقی رو استعمال کرتے ہوئے اس میں \عددی{v_o=A_d v_d} یعنی \عددی{v_o=-A_d v_1} ڈالتے ہیں۔
 \begin{align*}
 \frac{v_1-v_s}{R_1}+\frac{v_1-v_o}{R_2}=0\\
 \frac{v_1-v_s}{R_1}+\frac{v_1+A_d v_1}{R_2}=0\\
@@ -356,7 +356,7 @@ R_{\textup{داخلی}}=\frac{v_s}{i_s}=R_1+\frac{R_2}{1+A_d}
 \end{figure}
 شکل میں حسابی ایمپلیفائر کے داخلی سروں پر برقی دباو کو \عددی{v_k}  اور \عددی{v_n} جبکہ خارجی سرے پر برقی دباو کو \عددی{v_o} کہا گیا ہے۔اس کتاب میں یہی علامتیں استعمال کی جائیں گی۔اس دور کو \اصطلاح{منفی ایمپلیفائر}\فرہنگ{منفی ایمپلیفائر}\فرہنگ{amplifier!inverting}\حاشیہب{inverting amplifier}  کہتے ہیں۔
 
-ایسے  ادوار حل کرنے کی خاطر ہم حسابی ایمپلیفائر کے داخلی سروں پر \اصطلاح{کرچاف کے قوانین}\فرہنگ{کرچاف کے قوانین}\حاشیہب{Kirchoff's laws}  کا سہارا لیتے ہیں۔\اصطلاح{جوڑ}\فرہنگ{جوڑ}\حاشیہب{node}  \عددی{v_n} سے تین شاخیں نکلتی ہیں۔شکل میں ان شاخوں میں برقی رو کو \عددی{i_1} ، \عددی{i_2} اور \عددی{i_3} کہا گیا ہے۔کرچاف کا قانون برائے برقی رو\حاشیہب{Kirchoff's current law}  کہتا ہے کہ کسی بھی جوڑ پر اندر کی جانب کل برقی رو اس جوڑ پر باہر کی جانب کل برقی رو کے برابر ہو گی۔چونکہ ہم نے جوڑ پر تمام برقی رو کو باہر کی جانب نکلتے تصور کیا ہے لہٰذا اس صورت میں ان کا مجموعہ صفر ہو گا یعنی
+ایسے  ادوار حل کرنے کی خاطر ہم حسابی ایمپلیفائر کے داخلی سروں پر \اصطلاح{کرخوف کے قوانین}\فرہنگ{کرخوف کے قوانین}\حاشیہب{Kirchoff's laws}  کا سہارا لیتے ہیں۔\اصطلاح{جوڑ}\فرہنگ{جوڑ}\حاشیہب{node}  \عددی{v_n} سے تین شاخیں نکلتی ہیں۔شکل میں ان شاخوں میں برقی رو کو \عددی{i_1} ، \عددی{i_2} اور \عددی{i_3} کہا گیا ہے۔کرخوف کا قانون برائے برقی رو\حاشیہب{Kirchoff's current law}  کہتا ہے کہ کسی بھی جوڑ پر اندر کی جانب کل برقی رو اس جوڑ پر باہر کی جانب کل برقی رو کے برابر ہو گی۔چونکہ ہم نے جوڑ پر تمام برقی رو کو باہر کی جانب نکلتے تصور کیا ہے لہٰذا اس صورت میں ان کا مجموعہ صفر ہو گا یعنی
 \begin{align} \label{مساوات_منفی_منفی_مداخل_کے_جوڑ_پر_رو}
 i_1+i_2+i_3 = 0
 \end{align}
@@ -375,7 +375,7 @@ i_2 &=\frac{n_n-v_o}{R_2}
 \begin{align} \label{مساوات_منفی_کا_حصول}
 \frac{v_n - v_s}{R_1}+\frac{v_n-v_o}{R_2}+0=0
 \end{align}
-	جوڑ \عددی{v_n} پر کرچاف کا قانون برائے برقی رو استعمال کرتے ہم نے مساوات \حوالہ{مساوات_منفی_کا_حصول}  حاصل کی۔اگر جوڑ \عددی{v_k} پر بھی برقی ارکان مثلاً مزاحمتیں یا برقی اشارات جڑے ہوتے، تب اس جوڑ کو بھی بالکل جوڑ \عددی{v_n} کی طرح حل کرتے۔موجودہ مثال میں ایسا نہیں۔جوڑ \عددی{v_k} \اصطلاح{برقی زمین}\فرہنگ{برقی!زمین}\حاشیہب{ground} کے ساتھ جڑا ہے اور یوں ہم اس جوڑ کے لئے لکھ سکتے ہیں
+	جوڑ \عددی{v_n} پر کرخوف کا قانون برائے برقی رو استعمال کرتے ہم نے مساوات \حوالہ{مساوات_منفی_کا_حصول}  حاصل کی۔اگر جوڑ \عددی{v_k} پر بھی برقی ارکان مثلاً مزاحمتیں یا برقی اشارات جڑے ہوتے، تب اس جوڑ کو بھی بالکل جوڑ \عددی{v_n} کی طرح حل کرتے۔موجودہ مثال میں ایسا نہیں۔جوڑ \عددی{v_k} \اصطلاح{برقی زمین}\فرہنگ{برقی!زمین}\حاشیہب{ground} کے ساتھ جڑا ہے اور یوں ہم اس جوڑ کے لئے لکھ سکتے ہیں
 \begin{align} \label{مساوات_منفی_مثبت__زمین_پر}
 v_k=0
 \end{align}
@@ -471,7 +471,7 @@ v_o = -10 \times 2 \sin(t)=\underbrace{-20 \sin(t)}_{\text{غیر خطی خطہ}
 مثال \حوالہ{مثال_حسابی_غیر_خطی_کردار} کے پہلے اجزاء میں ایمپلیفائر خطی خطے میں رہتا ہے جبکہ آخری جزو میں یہ غیر خطی خطے میں داخل ہوتا ہے۔انہیں پر مزید غور کرتے ہیں۔\عددی{v_s=\SI{0.52}{\volt}} اور  \عددی{v_s=\SI{2}{\volt}} کی صورت میں \عددی{v_n} حاصل کریں۔
 
 حل:
-پہلی صورت میں \عددی{v_o=\SI{-5.2}{\volt}} اور دوسری صورت میں \عددی{v_o=\SI{-15}{\volt}} ہوں گے۔جوڑ \عددی{v_n} پر کرچاف کے قانون برائے برقی رو سے
+پہلی صورت میں \عددی{v_o=\SI{-5.2}{\volt}} اور دوسری صورت میں \عددی{v_o=\SI{-15}{\volt}} ہوں گے۔جوڑ \عددی{v_n} پر کرخوف کے قانون برائے برقی رو سے
 \begin{align*}
 \frac{v_n -v_s}{R_1}+\frac{v_n-v_o}{R_2}=0\\
 v_n=\frac{v_s R_2+v_o R_1}{R_1+R_2}
@@ -618,7 +618,7 @@ R_m=\frac{v_o}{i_s}=-R
 
 حسابی ایمپلیفائر کے تفرقی افزائش برقی دباو \عددی{A_d}  کی قیمت لامحدود ہونے کے وجہ سے نہایت کم داخلی اشارے پر بھی اس کو غیر خطی خطے میں داخل ہونا چاہیے۔حقیقت میں ایمپلیفائر استعمال ہی خطی خطے میں ہوتا ہے اور واپسی اشارے کی شمولیت اس کو ممکن بناتی ہے۔
 
-حسابی منفی ایمپلیفائر پر دوبارہ غور کریں۔داخلی اشارہ \عددی{v_s} کو منفی داخلی سرے پر مہیا کیا گیا ہے۔جیسا شکل میں تیر کے نشانوں سے دکھایا گیا ہے کہ اگر داخلی اشارہ \عددی{v_s} کو مثبت جانب \عددی{(\uparrow)} لے جایا جائے تو خارجی اشارہ \عددی{v_o} منفی جانب \عددی{(\downarrow)} حرکت کرتا ہے۔ اسی طرح اگر داخلی اشارہ \عددی{v_s} کو منفی جانب \عددی{(\downarrow)} لے جایا جائے تو خارجی اشارہ \عددی{v_o} مثبت جانب  حرکت کرتا ہے۔منفی داخلی سرے  پر کرچاف کے قانون برائے برقی رو سے 
+حسابی منفی ایمپلیفائر پر دوبارہ غور کریں۔داخلی اشارہ \عددی{v_s} کو منفی داخلی سرے پر مہیا کیا گیا ہے۔جیسا شکل میں تیر کے نشانوں سے دکھایا گیا ہے کہ اگر داخلی اشارہ \عددی{v_s} کو مثبت جانب \عددی{(\uparrow)} لے جایا جائے تو خارجی اشارہ \عددی{v_o} منفی جانب \عددی{(\downarrow)} حرکت کرتا ہے۔ اسی طرح اگر داخلی اشارہ \عددی{v_s} کو منفی جانب \عددی{(\downarrow)} لے جایا جائے تو خارجی اشارہ \عددی{v_o} مثبت جانب  حرکت کرتا ہے۔منفی داخلی سرے  پر کرخوف کے قانون برائے برقی رو سے 
 \begin{align}\label{مساوات_حسابی_واپسی_منفی}
 \frac{v_n-v_s}{R_1}+\frac{v_n-v_o}{R_2}=0\\
 v_0=\frac{R_2}{R_1} v_s
@@ -635,7 +635,7 @@ v_o&=-\left(\frac{5000}{1000}\right) \times 1=\SI{-5}{\volt}\\
  v_o&=-\left(\frac{5000}{1000}\right) \times 1.5=\SI{-7.5}{\volt}\\
 v_o&=-\left(\frac{5000}{1000}\right) \times 2=\SI{-10}{\volt}
 \end{align*}
-حاصل ہوتے ہیں۔آئیں ہر داخلی-خارجی برقی دباو کے جوڑے کو استعمال کرتے ہوئے شکل \حوالہ{شکل_حسابی_واپسی_منفی_ایمپلیفائر} پ میں \عددی{v_n} حاصل کریں۔کرچاف کے قانون برائے برقی رو سے
+حاصل ہوتے ہیں۔آئیں ہر داخلی-خارجی برقی دباو کے جوڑے کو استعمال کرتے ہوئے شکل \حوالہ{شکل_حسابی_واپسی_منفی_ایمپلیفائر} پ میں \عددی{v_n} حاصل کریں۔کرخوف کے قانون برائے برقی رو سے
 \begin{align*}
 \frac{v_n-v_s}{R_1}+\frac{v_n-v_o}{R_2}=0\\
 v_n=\frac{R_2 v_s +R_1 v_o}{R_1+R_2}
@@ -739,7 +739,7 @@ A_v=\frac{v_{o2}}{v_{s1}}=A_{v1} A_{v2}
 \جزوحصہ{مثبت ایمپلیفائر}
 
 	شکل \حوالہ{شکل_مثبت_ایمپلیفائر}  میں ایک اور واپسی دور دکھایا گیا ہے جسے \اصطلاح{مثبت ایمپلیفائر}\فرہنگ{مثبت ایمپلیفائر}
-\فرہنگ{amplifier!non-inverting}\حاشیہب{non-inverting amplifier}  کہتے ہیں۔آئیں اس دور کو کرچاف کے قوانین کی مدد سے حل کرتے ہیں۔
+\فرہنگ{amplifier!non-inverting}\حاشیہب{non-inverting amplifier}  کہتے ہیں۔آئیں اس دور کو کرخوف کے قوانین کی مدد سے حل کرتے ہیں۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{nonInvertingAmplifier}
@@ -758,7 +758,7 @@ i_3&=0
 \begin{align} \label{مساوات_مثبت_داخلی_دباو_اشارے_کے_برابر}
 v_k = v_s
 \end{align}
-	کرچاف کے قانون برائے برقی رو کو مساوات \حوالہ{مساوات_مثبت_داخلی_سرے_پر_رو}  کے ساتھ مل کر استعمال کرتے حاصل ہوتا ہے
+	کرخوف کے قانون برائے برقی رو کو مساوات \حوالہ{مساوات_مثبت_داخلی_سرے_پر_رو}  کے ساتھ مل کر استعمال کرتے حاصل ہوتا ہے
 \begin{align} \label{مساوات_مثبت_افزائش_کا_حصول}
 &i_1+i_2+i_3=0 \nonumber\\
 &\frac{v_n}{R_1}+\frac{v_n-v_o}{R_2}+0=0
@@ -908,7 +908,7 @@ i_3 &=0
 \begin{align}
 v_k=0
 \end{align}
-کرچاف کے قانون برائے برقی رو کو جوڑ \عددی{v_n} پر یوں لکھا جا سکتا ہے۔
+کرخوف کے قانون برائے برقی رو کو جوڑ \عددی{v_n} پر یوں لکھا جا سکتا ہے۔
 \begin{align} \label{مساوات_تفرق_کار_داخلی_جوڑ_پر_رو}
 i_1+i_2+i_3=0
 \end{align}
@@ -948,7 +948,7 @@ i_3&=0
 \begin{align}
 v_k =0
 \end{align}
-کرچاف کا قانون برائے برقی رو استعمال کرتے ہوئے اور \عددی{v_n}  میں \عددی{v_k} کی قیمت (یعنی صفر وولٹ) استعمال کرتے ہوئے حل کرتے ہیں۔
+کرخوف کا قانون برائے برقی رو استعمال کرتے ہوئے اور \عددی{v_n}  میں \عددی{v_k} کی قیمت (یعنی صفر وولٹ) استعمال کرتے ہوئے حل کرتے ہیں۔
 \begin{align*}
 i_1+i_2+i_3&=0  \\
 \frac{v_n-v_s}{R}+C \od{(v_n-v_o)}{t}+0&=0\\
@@ -1043,7 +1043,7 @@ i_o &=\frac{v_n-v_o}{R_0}
 \begin{align}
 v_k =0
 \end{align}
-جوڑ \عددی{v_n} پر کرچاف کے قانون برائے برقی رو استعمال کرتے ہوئے حل کرتے ہیں۔
+جوڑ \عددی{v_n} پر کرخوف کے قانون برائے برقی رو استعمال کرتے ہوئے حل کرتے ہیں۔
 \begin{align*}
 i_1+i_2+i_3+i_4&=0 \\
 \frac{v_n-v_{s1}}{R_1}+\frac{v_n-v_{s2}}{R_2}+0+\frac{v_n-v_o}{R_0}&=0
@@ -1083,7 +1083,7 @@ i_5&=0\\
 i_6&=0
 \end{aligned}
 \end{gather}
-انہیں کرچاف کے قانون برائے برقی رو میں  استعمال کرتے ہوئے، جوڑ \عددی{v_n}  کے لئے یوں لکھ سکتے ہیں۔
+انہیں کرخوف کے قانون برائے برقی رو میں  استعمال کرتے ہوئے، جوڑ \عددی{v_n}  کے لئے یوں لکھ سکتے ہیں۔
 \begin{gather} \label{مساوات_منفی_کار_منفی_سرے_پر_دباو}
 \begin{aligned}
  i_1+i_2+i_5=0\\
@@ -1092,7 +1092,7 @@ v_n \left(\frac{1}{R_1}+\frac{1}{R_2} \right)=\frac{v_{s1}}{R_1}+\frac{v_o}{R_2}
 v_n=\frac{\frac{v_{s1}}{R_1}+\frac{v_o}{R_2}}{\frac{1}{R_1}+\frac{1}{R_2}}
 \end{aligned}
 \end{gather}
-اسی طرح جوڑ \عددی{v_k}  پر کرچاف کا قانون برائے برقی رو لاگو کرتے ہوئے اسے یوں حل کر سکتے ہیں۔
+اسی طرح جوڑ \عددی{v_k}  پر کرخوف کا قانون برائے برقی رو لاگو کرتے ہوئے اسے یوں حل کر سکتے ہیں۔
 \begin{gather} \label{مساوات_منفی_کار_مثبت_سرے_پر_دباو}
 \begin{aligned}
 i_3+i_4+i_6=0\\
@@ -1233,7 +1233,7 @@ i_a&=\frac{v_s-v_n}{R_1}=\frac{v_s-\frac{R_4 v_s}{R_3+R_4}}{R_1}
 
 \جزوحصہ{جمع و منفی کار}
 شکل \حوالہ{شکل_جمع_و_منفی_کار} میں متعدد داخلی سروں  والا \اصطلاح{جمع و منفی کار} دکھایا گیا ہے۔مثبت داخلی سروں  پر \عددی{v_{j1}} تا \عددی{v_{js}} جبکہ منفی داخلی سروں  پر \عددی{v_{m1}} تا \عددی{v_{mn}} اشارات مہیا کئے گئے ہیں۔آئیں اس دور کو حل کریں۔
-جوڑ \عددی{v_n} پر کرچاف کے قانون برائے برقی رو سے ہم لکھ سکتے ہیں
+جوڑ \عددی{v_n} پر کرخوف کے قانون برائے برقی رو سے ہم لکھ سکتے ہیں
 \begin{align*}
 \frac{v_n-v_{m1}}{R_{m1}}+\frac{v_n-v_{m2}}{R_{m2}} \cdots +\frac{v_n-v_{mn}}{R_{mn}}+\frac{v_n-v_o}{R_0}=0\\
 v_n \left(\frac{1}{R_{m1}}+\frac{1}{R_{m2}}\cdots +\frac{1}{R_{mn}}+\frac{1}{R_0} \right)=\frac{v_{m1}}{R_{m1}}+\frac{v_{m2}}{R_{m2}}\cdots +\frac{v_{mn}}{R_{mn}}+\frac{v_o}{R_0}
@@ -1292,7 +1292,7 @@ i_{R_1}=\frac{v_2-v_1}{R_1}
 \end{align}
 ہو گی۔
 
-جوڑ \عددی{v_{n1}}  پر کرچاف کے قانون برائے برقی رو لاگو کرنے سے ثابت ہوتا ہے کہ اس جوڑ پر نسب \عددی{R_2} میں \عددی{i_{R_1}} کے برابر برقی رو گزرے گی جسے شکل میں تیر کے نشان سے دکھایا گیا ہے۔اسی طرح جوڑ \عددی{v_{n2}} پر کرچاف کے قانون سے ثابت ہوتا ہے کہ اس جوڑ پر نسب \عددی{R_2} میں بھی \عددی{i_{R_1}} گزرے گی جسے تیر کے نشان سے دکھایا گیا ہے۔اس طرح \عددی{i_{R_1}} تین سلسلہ وار جڑی مزاحمت \عددی{R_2} ، \عددی{R_1} اور  \عددی{R_2} سے گزرتی ہے۔ان سلسلہ وار جڑے مزاحمتوں کے آخری سروں کے مابین برقی دباو کو یوں لکھ سکتے ہیں۔
+جوڑ \عددی{v_{n1}}  پر کرخوف کے قانون برائے برقی رو لاگو کرنے سے ثابت ہوتا ہے کہ اس جوڑ پر نسب \عددی{R_2} میں \عددی{i_{R_1}} کے برابر برقی رو گزرے گی جسے شکل میں تیر کے نشان سے دکھایا گیا ہے۔اسی طرح جوڑ \عددی{v_{n2}} پر کرخوف کے قانون سے ثابت ہوتا ہے کہ اس جوڑ پر نسب \عددی{R_2} میں بھی \عددی{i_{R_1}} گزرے گی جسے تیر کے نشان سے دکھایا گیا ہے۔اس طرح \عددی{i_{R_1}} تین سلسلہ وار جڑی مزاحمت \عددی{R_2} ، \عددی{R_1} اور  \عددی{R_2} سے گزرتی ہے۔ان سلسلہ وار جڑے مزاحمتوں کے آخری سروں کے مابین برقی دباو کو یوں لکھ سکتے ہیں۔
 \begin{gather}
 \begin{aligned}
 v_{o2}-v_{o1}&= i_{R_1} \times \left (R_2+R_1+R_2 \right )\\
@@ -1350,7 +1350,7 @@ v_{n1}-v_{o1}&=0.6 \sin \omega t\\
 v_{o1}&=4-0.003 \sin \omega t -0.6 \sin \omega t\\
 &=4-0.603 \sin \omega t
 \end{align*}
-حاصل ہو گا۔یہاں رک کر نتائج پر غور کریں۔مشترکہ اشارہ جوں کا توں ہے جبکہ تفرق اشارہ دونوں خارجی سروں  پر  بڑھ گیا ہے۔\عددی{v_{o2}} اور \عددی{v_{o1}} کو منفی کار کے حوالے کیا جاتا ہے۔منفی کار  کے مثبت داخلی سرا \عددی{v_k} پر کرچاف کے قانون برائے برقی رو لکھتے ہوئے
+حاصل ہو گا۔یہاں رک کر نتائج پر غور کریں۔مشترکہ اشارہ جوں کا توں ہے جبکہ تفرق اشارہ دونوں خارجی سروں  پر  بڑھ گیا ہے۔\عددی{v_{o2}} اور \عددی{v_{o1}} کو منفی کار کے حوالے کیا جاتا ہے۔منفی کار  کے مثبت داخلی سرا \عددی{v_k} پر کرخوف کے قانون برائے برقی رو لکھتے ہوئے
 \begin{align*}
 &\frac{v_k-v_{o2}}{R_3}+\frac{v_k}{R_4}=0\\
 v_k&=\left(\frac{R_4}{R_3+R_4} \right) v_{o2}\\
@@ -1680,7 +1680,7 @@ V_{CC} =\SI{12}{\volt} \hspace{1cm} V_{EE}=\SI{-12}{\volt} \hspace{1cm} V_{OS}=\
 \end{align*}
 ہم اس سے قدر زیادہ مزاحمت منتخب کرتے ہیں مثلاً \عددی{R_4 =\SI{100}{\ohm}}۔
 
-آئیں دیکھیں کہ ان قیمتوں سے \عددی{v_k} میں کن حدود کے مابین تبدیلی ممکن ہے۔\عددی{R_4} کے متغیر سرے کو ایک جانب پورا گھما کر شکل  الف     میں دکھایا گیا ہے۔اس صورت میں کرچاف کے قانون برائے برقی رو کی مدد سے ہم لکھ سکتے ہیں
+آئیں دیکھیں کہ ان قیمتوں سے \عددی{v_k} میں کن حدود کے مابین تبدیلی ممکن ہے۔\عددی{R_4} کے متغیر سرے کو ایک جانب پورا گھما کر شکل  الف     میں دکھایا گیا ہے۔اس صورت میں کرخوف کے قانون برائے برقی رو کی مدد سے ہم لکھ سکتے ہیں
 \begin{align*}
 \frac{v_k-V_{CC}}{R_3}+\frac{v_k-V_{EE}}{R_4+R_5}=0\\
 \frac{v_k-12}{100000}+\frac{v_k+12}{100+100000}=0\\
@@ -1794,7 +1794,7 @@ V_O=-I_{B2}R+I_{B1}R=\left (I_{B1}-I_{B2} \right )R
 \begin{align*}
 I_{R1}=\frac{R}{R_1}I_{B2}
 \end{align*}
- منفی داخلی سرے  پر کرچاف کے قانون برائے برقی رو کی مدد سے \عددی{I_{R2}} یوں حاصل کیا جا سکتا ہے۔
+ منفی داخلی سرے  پر کرخوف کے قانون برائے برقی رو کی مدد سے \عددی{I_{R2}} یوں حاصل کیا جا سکتا ہے۔
 \begin{align*}
 &I_{R1}+I_{R2}=I_{B1}\\
 &\frac{R}{R_1}I_{B2}+I_{R2}=I_{B1}\\
