--- a/tex/electronicsOscillators.tex
+++ b/tex/electronicsOscillators.tex
@@ -59,7 +59,7 @@ WA =1
 \end{figure}
 
 حل:
-\عددیء{\hat{V_i} = V \phase{\SI{0}{\degree}}} لیتے ہوئے، دائرے میں برقی رو \عددیء{\hat{I}} لکھتے ہوئے کرچاف کے قانون برائے برقی دباو سے حاصل ہوتا ہے
+\عددیء{\hat{V_i} = V \phase{\SI{0}{\degree}}} لیتے ہوئے، دائرے میں برقی رو \عددیء{\hat{I}} لکھتے ہوئے کرخوف کے قانون برائے برقی دباو سے حاصل ہوتا ہے
 \begin{align*}
 \hat{I}=\frac{V \phase{\SI{0}{\degree}}}{R+\frac{1}{j\omega C}}
 \end{align*}
@@ -605,7 +605,7 @@ i_2&=\frac{v_o}{j \omega L_2}=\frac{v_{be}-\frac{v_{be}}{\omega^2 L_1 C}}{j \ome
 \begin{align*}
 i_R&=\frac{v_o}{R_c}=\frac{v_{be}-\frac{v_{be}}{\omega^2 L_1 C}}{R_c}
 \end{align*}
-پایا جائے گا۔یوں کرچاف کے قانون برائے برقی رو کی مدد سے ہم لکھ سکتے ہیں
+پایا جائے گا۔یوں کرخوف کے قانون برائے برقی رو کی مدد سے ہم لکھ سکتے ہیں
 \begin{align*}
 -g_m v_{be}&=\frac{v_{be}-\frac{v_{be}}{\omega^2 L_1 C}}{R_c}+\frac{v_{be}-\frac{v_{be}}{\omega^2 L_1 C}}{j \omega L_2}+\frac{v_{be}}{j \omega L_1}\\
 &=v_{be} \left[\frac{1}{R_c}-\frac{1}{\omega^2 R_c L_1 C} +\frac{1}{j \omega L_2}-\frac{1}{j \omega^3 L_1 L_2 C} +\frac{1}{j \omega L_1}\right]
@@ -642,7 +642,7 @@ g_m R_c=\abs{A_v}=\frac{L_2}{L_1}
 i_{R_m}&=\frac{v_{be}}{R_m}\\
 i_{C_1'}&=j \omega C_1' v_{be}
 \end{align*}
-ہو گی۔یوں کرچاف کے قانون برائے برقی رو کے تحت
+ہو گی۔یوں کرخوف کے قانون برائے برقی رو کے تحت
 \begin{align*}
 i_L=i_{R_m}+i_{C_1'}=\frac{v_{be}}{R_m}+j \omega C_1' v_{be}
 \end{align*}
@@ -658,7 +658,7 @@ v_o&=v_{be}+v_L=\left[1+ j \omega L \left(\frac{1}{R_m}+j \omega C_1' \right) \r
 \begin{align*}
 i_{C_2}&=j \omega C_2 v_o=j \omega C_2 \left[1+ j \omega L \left(\frac{1}{R_m}+j \omega C_1' \right) \right] v_{be}
 \end{align*}
-ہوں گے۔کرچاف کے قانون برائے برقی رو کے تحت \عددیء{i_{C_2}+i_L=-g_m v_{be}} ہے یعنی
+ہوں گے۔کرخوف کے قانون برائے برقی رو کے تحت \عددیء{i_{C_2}+i_L=-g_m v_{be}} ہے یعنی
 \begin{gather}
 \begin{aligned} \label{مساوات_مرتعش_ٹرانزسٹر_کالپٹس_مثال_الف}
 -g_m v_{be}&=j \omega C_2 \left[1+ j \omega L \left(\frac{1}{R_m}+j \omega C_1' \right) \right] v_{be}+\left(\frac{1}{R_m}+j \omega C_1'\right) v_{be}\\
