--- a/tex/electronicsFrequencyResponse.tex
+++ b/tex/electronicsFrequencyResponse.tex
@@ -836,7 +836,7 @@ A_v=-R_c \beta \left(s C_e'+\frac{1}{R_e'} \right) \left[\frac{1}{\left(r_i+\fra
 A_v&=\frac{-R_c \beta \left(s C_e'+\frac{1}{R_e'} \right)}{\left(r_i+\frac{1}{sC_b}\right)\left(\frac{1}{R_m}+sC_e' \right)+1}\\
 &=\frac{-R_c \beta \left(s C_e'+\frac{1}{R_e'} \right)}{\frac{r_i}{R_m}+s r_i C_e'+\frac{1}{s R_mC_b}+\frac{C_e'}{C_b}+1}
 \end{align*}
-کسر کے نچلے حصے میں \عددی{s} کی تعلق سے اجزاء اکھٹے کرتے  ہوئے حل کرتے ہیں۔
+کسر کے نچلے حصے میں \عددی{s} کی تعلق سے اجزاء اکٹھے کرتے  ہوئے حل کرتے ہیں۔
 \begin{align*}
 A_v&=\frac{-R_c \beta \left(s C_e'+\frac{1}{R_e'}\right)}{s r_i C_e'+\left(\frac{r_i}{R_m}+\frac{C_e'}{C_b}+1\right)+\frac{1}{s R_mC_b}}\\
 &=\frac{-R_c \beta R_m C_b\left(s C_e'+\frac{1}{R_e'} \right) s}{s^2 r_i C_e' R_m C_b+s \left(\frac{r_i}{R_m}+\frac{C_e'}{C_b}+1\right) R_m C_b+1}\\
